--- a/新闻/自由亚洲电台.md
+++ b/新闻/自由亚洲电台.md
@@ -1,4 +1,10 @@
 
+  ## 6/3/2023 - [美助理国务卿和白宫国安会高官联袂访华](https://www.rfa.org/mandarin/Xinwen/8-06032023161208.html)
+ ```美国国务院星期六宣布，主管东亚和太平洋事务的助理国务卿康达（DanielKritenbrink）将于6月4日至10日前往中国和新西兰访问。综合媒体3日报道，这是继美国中央情报局局长伯恩斯（WilliamBurns）上个月秘密访问北京之后，又一位主管中国事务的高层官员访华。美国国务院发表的一份声明说，白宫国安会主管中国与台湾事务的新任资深主任萨拉·贝兰（SarahBeran）也会与康达一起前往北京，与中方官员就双边关系举行会谈。美国助理国务卿康达与白宫国安会资深主任贝兰得以前往北京与中方官员举行会谈，表明北京虽然拒绝恢复两军高层交往，但是似乎并不反对两国外交和经贸官员之间的对话。据法新社的报道，康达今年二月也曾访华，为布林肯预定对北京的访问打前站，但是布林肯却因为美中气球事件而推迟或取消了访问。（责编：梒青）```0
+  ## 6/3/2023 - [六四34周年前夕：CECC主席提名彭立发、张展、李康梦角逐诺贝尔和平奖](https://www.rfa.org/mandarin/Xinwen/7-06032023160525.html)
+ ```美国国会及行政当局中国委员会主席克里斯·史密斯（共和党-新泽西州）和参议员杰夫·默克利（民主党-俄勒冈州），6月2日就六四34周年发表声明，宣布增加提名北京四通桥抗议事件主角彭立发、公民记者张展以及南京传媒学院学生李康梦等三人，为2023年诺贝尔和平奖候选人。声明说，“我们每年都纪念天安门悲剧，因为它太重要了，”我们向34年前的今天勇敢抗议的人们致敬，向1989年坦克驶过北京街头时牺牲的人们致敬。我们要继续铭记天安门大屠杀，绝不允许中共将其从历史书中抹去。声明提到“今天的纪念再次提醒我们永远不要将中国人民与中国共产党混为一谈。尽管一波又一波的镇压、暴行和虐待，中国人民对自由的渴望依然存在。”声明说，“在这个纪念日，我们与所有在中国和平寻求自由的人站在一起，缅怀天安门大屠杀。我们通过继续揭露中国的暴行和其他令人发指的侵犯人权行为，并追究中共官员对他们的反人类罪行的责任，来纪念这个重要的日子。由于中国有太多人无法为自己发声，我们承诺为他们辩护，支持和平促进中国人权的努力，并争取释放被任意拘留的政治犯。中国人民必须知道，自由世界永远不会忘记他们的勇气和牺牲。”（责编：梒青）```0
+  ## 6/3/2023 - [白纸运动参与者曹芷馨获颁2023年“青年中国人权奖”](https://www.rfa.org/mandarin/Xinwen/6-06032023160052.html)
+ ```一年一度的“青年中国人权奖”经过投票，今年在三名候选人中选出白纸运动的参与者曹芷馨。“青年中国人权奖”评选委员会认为：曹芷馨不顾个人安危，走上街头，悼念那些因动态清零政策而惨死的同胞，勇敢地为他们发声，足以成为今后国人抗争的表率，与三十四年前的八九精神不谋而合。“青年中国人权奖”于2000年设立，由海外的一批八九学生发起，旨在支持中国境内秉持“八九”精神，为中国的民主和人权事业做出突出贡献的人士。每年“六四”纪念日左右颁布，至今已经坚持了23年。曹芷馨是中国人民大学2021届历史学硕士，被捕前是北京一家出版社的图书编辑。2022年11月27日，参与北京亮马河的悼念活动。11月29日凌晨起，与朋友一起遭到警察传唤，在片区派出所接受警察教育24小时，当时警方认定无罪并予以释放。12月18日，警察将其几位朋友以刑事拘捕的名义带走，要求他们在罪名为空白的拘捕令上签名，并拒绝向外界告知他们的关押地点。曹芷馨预感自己也会被捕，提前录下视频，向外界说明情况。12月23日被警察带走，因参与白纸运动，以“寻衅滋事”罪名被逮捕，羁押于朝阳看守所。在其失联后视频由友人发出，并公布已确认的13名失联青年的身份。2023年4月19日，曹芷馨获释。（责编：梒青）```0
   ## 6/3/2023 - [日美韩防长同意年内开始即时共享朝鲜导弹情报](https://www.rfa.org/mandarin/Xinwen/5-06032023113639.html)
  ```据共同社3日消息，日美韩三国防长会谈当天在新加坡举行，就年内开始即时共享朝鲜弹道导弹相关情报达成共识。利用日韩经由美国共享情报的三国间协定，在数月内启动初期运用。为了遏制朝鲜，会谈还商定反潜和反导的三国联合训练将改为定期举行。会谈后发表了写入共识内容的联合声明。声明谴责朝鲜使用弹道导弹技术于5月31日实施的“军事侦察卫星”发射违反联合国安理会决议等，要求立即停止引起地区局势紧张的不负责的行为。考虑到中国，声明表示“也强烈反对试图凭借实力和胁迫改变现状的任何行为”，并强调了台湾海峡和平与稳定的重要性。奥斯汀在会谈中重申，美国将动用包括核在内的一切能力参与日本与韩国的防卫。（责编：梒青）```0
   ## 6/3/2023 - [仍有德国前飞行员在中国训练驾驶战机](https://www.rfa.org/mandarin/Xinwen/4-06032023112522.html)
@@ -7,8 +13,8 @@
  ```综合外电3日报道，中国和俄罗斯周五无视美国呼吁联合国安理会团结起来，共同谴责朝鲜本周试图发射卫星，反而指责华盛顿加剧了朝鲜半岛的紧张局势。美国驻联合国使团的外交官罗伯特·伍德（RobertWood）在美国和盟国组织的联合国安理会会议上发出呼吁，讨论朝鲜周三的发射卫星失败。美国称朝鲜这次失败的发射违反了多项联合国决议，因为它使用了弹道导弹技术。伍德说：“我们呼吁所有安理会成员国维护安理会的信誉，与我们一起谴责这种非法行为，并敦促朝鲜不要继续其既定的计划，进行另一次进一步威胁国际和平与安全的发射。”发射后，朝鲜领导人金正恩的妹妹金与正表示，朝鲜将很快将一颗军事间谍卫星送入轨道，并誓言平壤将提高其军事监视能力。中国常驻联合国副代表耿爽在联合国会议上表示，朝鲜有“合理的安全关切”，并表示安理会应该促进减少升级，而不是指责一方。耿爽发言后，伍德再次发言指出，“中国代表团的代表在任何时候都没有谴责朝鲜的这次太空发射。”耿爽对此回应说，有必要进行真正的对话，并且考虑到朝鲜方面的关切。联合国秘书长安东尼奥·古特雷斯（AntonioGuterres）本周表示，平壤使用弹道导弹技术的任何发射都违反了安理会决议。金与正称对朝鲜发射卫星的批评是“自相矛盾的”，因为美国和其他国家已经发射了“数千颗卫星”。（责编：梒青）```0
   ## 6/3/2023 - [美中情局长秘密访问中国](https://www.rfa.org/mandarin/Xinwen/2-06032023111253.html)
  ```一位不愿透露姓名的美国官员2日对媒体表示，美国中央情报局（CIA）局长伯恩斯(WilliamBurns)于5月秘密访问了中国。“上个月，伯恩斯局长前往北京会见了中国同行，并强调了在情报沟通渠道中保持顺畅的重要性。”这位官员说。该官员没有提供有关会晤的更多细节。美国中央情报局并不定期公布其负责人的旅行记录。美联社援引第二位匿名消息人士的话说，伯恩斯只与情报官员会面，而没有与政治领导人会面。美国政府曾经派这位中央情报局局长进行过多次敏感的访问，包括在2021年底访问俄罗斯，讨论莫斯科准备入侵乌克兰的迹象。（责编：梒青）```0
-  ## Invalid Date - [美防长对中国不愿接触表示“深切关注” 北京指责美国破坏台海稳定沙利文：威慑中俄  美国无需更多核武香格里拉对话会：中方拒绝对话 奥斯汀称之“不幸”日本在冲绳部署爱国者导弹  日媒：考虑到中国与台海局势“疫苗宝宝之家” 发起人何方美遭超期羁押 女儿滞留精神病院美国跨党派议员提案：悼念六四  谴责中共打压人权六四事件34周年　人权组织敦促中国政府承认屠城责任《华尔街日报》：美国在亚洲建立前哨基地应对中国导弹威胁中国部分民航班机偏航金门　台军方：因天气影响维权网发布《中国大陆在押政治犯、良心犯月度报告》　涉1563人余文生妻子许艳被加控“煽动颠覆”后　看守所拒绝律师会见](https://www.rfa.org/mandarin/Xinwen/1-06032023094945.htmlhttps://www.rfa.org/mandarin/Xinwen/10-06022023165710.htmlhttps://www.rfa.org/mandarin/Xinwen/9-06022023165555.htmlhttps://www.rfa.org/mandarin/Xinwen/8-06022023165445.htmlhttps://www.rfa.org/mandarin/Xinwen/7-06022023165330.htmlhttps://www.rfa.org/mandarin/Xinwen/6-06022023165228.htmlhttps://www.rfa.org/mandarin/Xinwen/5-06022023115605.htmlhttps://www.rfa.org/mandarin/Xinwen/4-06022023114919.htmlhttps://www.rfa.org/mandarin/Xinwen/3-06022023114332.htmlhttps://www.rfa.org/mandarin/Xinwen/2-06022023114004.htmlhttps://www.rfa.org/mandarin/Xinwen/1-06022023113611.html)
- ```据本台英语组报道，美国国防部长劳埃德·奥斯汀在与中国国防部长会面的呼吁遭到拒绝后，敦促中国军方领导人进行接触，称开放的沟通渠道“至关重要”。奥斯汀周六在新加坡香格里拉对话安全论坛上发表重要讲话时说，他“深感关切的是，中国一直不愿更认真地参与我们两国军队之间更好的危机管理机制。”美国国防部长在提到中国时使用的正式名称是中华人民共和国。他说，“对于负责任的国防领导人来说，合适的谈话时间是任何时候，合适的谈话时间是每次，现在是合适的谈话时间，”他并补充说“对话不是奖励。 这是必须的。”“我们谈得越多，就越能避免可能导致危机或冲突的误解和误判。”美国国防部长奥斯汀和自 2018 年以来一直受到美国制裁的中国国防部长李尚福，在周五的正式晚宴前进行了简短的握手，但没有交谈，也没有预计他们之间会举行双边会谈。“晚餐时亲切的握手不能替代实质性的参与，”奥斯汀说。美国国防部长抨击了中国，他说中国“继续对在国际领空合法飞行的美国和盟国飞机进行数量惊人的危险拦截。”就在上周，美国军方指责中国的J-16战斗机在拦截美国空军RC-135侦察机时进行了“不必要的攻击性”机动。“我们不寻求冲突或对抗，但面对欺凌或胁迫，我们不会退缩，”奥斯汀说。美国战略与国际研究中心 (CSIS) 非常驻研究员 HuongLeThu 说，两个大国之间明显的裂痕已经“成为新的现实”。HuongLeThu 告诉自由亚洲电台，无论“他们喜欢与否”，地区国家都必须接受它。“但他们可以通过促进和鼓励美中之间的对话来降低热度，从而有助于控制紧张局势，”这位研究员补充说。共同愿景菲律宾国防部高级副部长兼主管官员小卡利托·加尔维斯 (CarlitoGalvezJr.) 表示，马尼拉认为“国际法是各国之间最大的平衡器”。菲律宾于 2016 年在联合国法庭赢得了针对中国在南中国海的主张的法律诉讼，但北京迄今拒绝接受该裁决。两国最近因在南沙群岛的一些岛屿的主权问题卷入了新的争端。“俗话说，好篱笆造就好邻居，”加尔维斯说，“只有当邻国有明确的界限并尊重既定界限时，关系才会真正友好。”印度尼西亚国防部长普拉博沃·苏比安托表示，“我们必须通过对话、谈判和双赢解决方案，来克服我们的地缘政治竞争和领土争端。”“妥协是社区和社会繁荣的唯一途径，”他说，并警告说超级大国之间的竞争“已经变成了冷战”，在任何战争中，“灾难的危险总是近在咫尺。”不过，美国国防部长奥斯汀坚称，美国“不寻求新冷战”。“竞争绝不能演变成冲突。 该地区永远不应分裂为敌对集团，”他说。奥斯汀表示，华盛顿并未像中国一再声称的那样在印太地区创建、并且也不愿意创建一个新的北约。然而，奥斯汀说，美国希望建立“灵活的联盟来推进我们的共同愿景”，以使印太地区“更加稳定和更有弹性”。华盛顿将澳大利亚、日本、韩国、菲律宾和泰国列为其在该地区的“坚定盟友”，并将印度、印度尼西亚、越南和新加坡视为“重要伙伴”。在谈到自治的台湾时，奥斯汀说，美国“仍然坚定地致力于维持那里的现状，这与我们长期以来的一个中国政策一致，并履行我们在《台湾关系法》下的既定义务。”“冲突既不是迫在眉睫也不是不可避免的。 今天的威慑力很强，我们的工作就是保持这种威慑力，” 奥斯汀说。北京将台湾视为中国的一个省，并坚决抗议“外部势力”参与台湾政治。中国的中央军委联合参谋部副部长景建峰中将对美国防长奥斯汀的涉台言论进行了回击，称其“完全错误”。“世界上只有一个中国，台湾是中国领土神圣不可分割的一部分，”完成祖国统一是包括台湾同胞在内的全体中国人民的共同愿望和神圣责任。 祖国的。”中国的反击中国人民解放军军事科学院研究员赵小卓大校表示，一直试图改变台海现状的是美国。赵在香格里拉对话会上对记者说：“台湾海峡在过去十年左右的时间里非常稳定，但美国想要破坏这种稳定。”“这样他们就可以向台湾出售武器并赚很多钱，”他说。新加坡安全论坛的中国与会者反击了美国及其盟友的批评。赵大校表示，华盛顿需要改变其与他人互动方式中他所说的“错误行为”。“在对话方面，你必须照顾对方的利益，”他说，并指责美方不理解这一基本原则。另一位中国代表、来自中国国防大学国家安全学院的张驰大校质疑华盛顿在建立多边机构的同时促进东南亚集团东盟的中心地位是否自相矛盾。与此同时，该学院前副校长唐永胜少将回击加拿大国防部长安妮塔·阿南德称中国是该地区的破坏性力量。他说“中国为维护该地区的和平与稳定做出了巨大努力”。中国共产党喉舌《环球时报》周六在一篇报道中援引中国军方一名官员的话说，“中国有信心走上舞台发声。”“尽管明知香格里拉对话会是西方国家主导的攻击中国的平台，但中国还是来了，”该报称。中国国防部长李尚福将于周日，也就是论坛的最后一天，就北京的新安全举措发表重要讲话。（责编：梒青）Sat,03Jun202309:51:00-0400沙利文：威慑中俄美国无需更多核武据路透社6月2日报道，美国国家安全顾问杰克·沙利文（JakeSullivan）当天向军备控制协会倡导组织发表讲话时表示，美国无需更多核武器来威慑俄罗斯与中国加在一起的武装力量，因为美国具有先进的军事能力。https://www.rfa.org/mandarin/Xinwen/10-06022023165710.htmlhttps://www.rfa.org/mandarin/Xinwen/10-06022023165710.html图为美国空军的義勇兵III型洲际弹道导弹，可用于投射核弹头。路透社资料图片据路透社6月2日报道，美国国家安全顾问杰克·沙利文（JakeSullivan）当天向军备控制协会倡导组织发表讲话时表示，美国无需更多核武器来威慑俄罗斯与中国加在一起的武装力量，因为美国具有先进的军事能力。沙利文还表示，只要莫斯科能保持一致，华盛顿将遵守2010年有关战略核武器限制条约的规定，直到该条约2026年到期，并且美国希望与中俄两国举行军备控制谈判。报道说，中国在扩大其核武库的同时，与美国在台湾问题上也处于紧张对峙状态。中方拒绝与华盛顿进行减少冲突风险的对话，本周更拒绝了两国防长在新加坡香格里拉对话会期间的会谈。根据五角大楼估算，到2035年，中国的核武库可能会增加两倍以上，达到1500枚核弹头。而威胁要在对乌克兰战争中使用核武器的俄罗斯，今年2月已宣布暂停参与上述战略核武器限制条约。沙利文表示，美国不需要将核力量增加到超过竞争对手的总和才能成功威慑他们，也不需要部署更加危险的核武器来维持威慑，威慑意味着有“更好”的方法，而不是“更多”的方法。但他强调，上述战略核武器限制条约必须考虑到中国不断增长的核武库问题。责编：何平Fri,02Jun202316:57:00-0400香格里拉对话会：中方拒绝对话奥斯汀称之“不幸”据本台英语部发自新加坡的报道，在南海和东亚紧张局势升级之际，新加坡举办的重要地区安全论坛“香格里拉对话会”格外引人注目。但会议期间，美中两国防长面对面交流的大门却依然关闭。https://www.rfa.org/mandarin/Xinwen/9-06022023165555.htmlhttps://www.rfa.org/mandarin/Xinwen/9-06022023165555.html美国防长奥斯汀与中国防长李尚福等人在周五新加坡晚宴上同坐主桌。路透社图片据本台英语部发自新加坡的报道，在南海和东亚紧张局势升级之际，新加坡举办的重要地区安全论坛“香格里拉对话会”格外引人注目。但会议期间，美中两国防长面对面交流的大门却依然关闭。美国国防部长奥斯汀此前邀请中国国防部长李尚福在新加坡香格里拉对话期间举行双边会谈，但被中国防长拒绝。奥斯汀在抵达新加坡前，以“不幸”形容中方的决定。他表示，拥有强大能力的国家相互对话很重要，以此可管理危机并防止事态失控。据悉，本届为期三天的“香格里拉对话”有来自49个国家的约600位代表与会，美中防长将分别发表演说。另据台湾中央社报道，美国防长奥斯汀与中国防长李尚福等人在周五新加坡晚宴上同坐主桌。先抵达会场的奥斯汀在李尚福到场后主动向前握手致意，但未有太多互动。责编：何平Fri,02Jun202316:56:00-0400日本在冲绳部署爱国者导弹日媒：考虑到中国与台海局势https://www.rfa.org/mandarin/Xinwen/8-06022023165445.htmlhttps://www.rfa.org/mandarin/Xinwen/8-06022023165445.html日本自卫队士兵走过一具“爱国者”-3导弹发射单位路透社资料图片为应对朝鲜发射“军事侦察卫星”以及可能的飞行物散落物体等，日本军方早在数周前即已在冲绳县多个岛屿部署爱国者地对空拦截导弹。但有日本媒体认为，此举是考虑到与台湾突发事态有关的中国大陆，而进行的部队活动“预演”。据共同社6月2日报道，日本防卫相滨田靖一当天回答有关朝鲜发射“卫星”后，原计划在石垣岛展开活动的填埋地“南NU滨”，为何没有“爱国者3”导弹的踪影等问题。滨田靖一仅表示，“对于运用的详情不予回答”。据报道，日本防卫省在4月下旬已经向冲绳县的宫古、石垣、与那国三岛的自卫队设施运进“爱国者3”导弹。但因气候原因，石垣岛没有把导弹系统部署在设施外部，而在宫古岛和与那国岛上的拦截导弹发射器则呈收起状态。共同社指出，日本政府出于对中国军力增强及台湾发生突发事态的担忧，正在加强西南诸岛的防卫能力。有自卫队干部披露，此举是“把朝鲜发射作为借口，实际上是设想台湾突发事态而移动了部队。”责编：何平Fri,02Jun202316:54:00-0400“疫苗宝宝之家”发起人何方美遭超期羁押女儿滞留精神病院https://www.rfa.org/mandarin/Xinwen/7-06022023165330.htmlhttps://www.rfa.org/mandarin/Xinwen/7-06022023165330.html“疫苗宝宝之家”发起人何方美何方美推特截图据中国民间权益组织民生观察6月2日引述知情人士披露，维权团体“疫苗宝宝之家”发起人何方美因在2020年10月9日，带着疫苗致残的女儿前往河南辉县政府门前泼油漆抗议，被警察当场带走并刑拘后，目前该案仍未宣判，何方美本人则处在被超期羁押中，而她的两个女儿仍滞留在精神病院。据介绍，何方美因1岁10月大的女儿于2018年3月，在河南辉县接种甲肝、麻腮风、百白破疫苗后,导致病毒性脊髓炎而瘫痪。多方求助投诉均被拒后，夫妇俩人在北京一边为女儿治病，一边上访维权，并因此屡遭当局打压。民生观察披露，近日何方美写信请姐姐照顾孩子，可医院和警察都不让姐姐探望。家属就此呼吁当局，孩子们是无辜的，他们应该和家人一起生活。此外，有网友发起“六一明信片行动，接孩子回家”，通过网络声援人权捍卫者何方美。责编：何平Fri,02Jun202316:53:00-0400美国跨党派议员提案：悼念六四谴责中共打压人权https://www.rfa.org/mandarin/Xinwen/6-06022023165228.htmlhttps://www.rfa.org/mandarin/Xinwen/6-06022023165228.html美国众议院外交事务委员会印太小组主席金映玉（YoungKim）(图左)，和该小组首席议员阿米·贝拉（AmiBera）。维基百科/RFA组图中国六四事件34周年之际，美国众议院外交事务委员会印太小组主席金映玉（YoungKim）和该小组首席议员阿米·贝拉（AmiBera）提出一项跨党派决议，以纪念1989年天安门广场大屠杀的受害者，并谴责中国共产党继续在大陆及香港打压人权和基本自由。金映玉众议员表示，“我们永远不会忘记那些，面对压迫政权而在天安门广场与人民解放军面对面的勇敢的学生们。三十多年后，我们通过支持那些仍然被困在中国共产党威权主义下、但却热爱自由的人们，来缅怀受害者并纪念他们的遗产。”她强调，该决议向外界发出一致信息，即美国将继续成为世界舞台上自由、希望和机会的灯塔。据悉，上述决议案敦促中共当局停止对六四事件进行言论审查，接受联合国人权高专进行的独立调查，并允许流亡海外的六四参与者能在不面临报复风险的情况下返回中国。该决议同时呼吁香港政府及北京当局，尊重港人权利、自由以及香港法治体系的独立性，并依据《中英联合声明》与《基本法》有关“一国两制”的承诺，恢复香港独立的民选代表。上述议案还同时获得其他11位美国两党众议员的联署支持。责编：何平Fri,02Jun202316:52:00-0400六四事件34周年　人权组织敦促中国政府承认屠城责任总部位于美国纽约的国际人权组织人权观察在六四事件34周年前夕发表声明，敦促中国政府承认大规模杀害民主运动示威者的责任，并为死难者及其家属提供赔偿。https://www.rfa.org/mandarin/Xinwen/5-06022023115605.htmlhttps://www.rfa.org/mandarin/Xinwen/5-06022023115605.html国际人权组织人权观察在六四事件34周年前夕发表声明，敦促中国政府承认大规模杀害民主运动示威者的责任。HumanRightsWatch官网截图总部位于美国纽约的国际人权组织人权观察在六四事件34周年前夕发表声明，敦促中国政府承认大规模杀害民主运动示威者的责任，并为死难者及其家属提供赔偿。声明指出，当全球民众悼念1989年北京六四屠杀之际，中国当局正日益积极抹消相关记忆，并从六四周年的几星期前就开始防堵民间悼念。各地维权人士和六四死难者亲属团体“天安门母亲”的成员，均遭限制行动与对外联系。而中国政府从未承认对屠杀负责，也从未追究任何官员的法律责任，既无意调查相关事件，也不愿公布被杀死、杀伤、强迫失踪或入狱者的资料。人权观察表示，对六四屠杀及其后续镇压缺乏长期一致的国际应对，是导致北京当局日益明目张胆侵犯人权的因素之一。作为多部国际人权条约缔约国以及联合国人权理事会现任成员，中国有义务“维护人权的最高标准”。人权观察敦促中国政府尊重言论、结社自由与和平集会的权利，停止对质疑六四屠杀官方说法的人士加以骚扰和任意拘留；向“天安门母亲”成员道歉，公布所有死难者名单，并向死难者家属提供赔偿；批准对六四及后续事件进行公开独立调查，并迅速公布调查结果与结论；允许涉及八九民运而流亡海外的中国公民不受阻碍返国；以及调查所有参与策划或下令对示威群众非法使用致命武力的政府与军方官员，并予以起诉。责编：何平Fri,02Jun202311:59:00-0400《华尔街日报》：美国在亚洲建立前哨基地应对中国导弹威胁据美国《华尔街日报》6月2日报道，为应对来自中国不断增大的军事挑战，美国已在亚洲采取新的军事策略，包括增多前哨基地，以摆脱对大型军事基地的严重依赖。https://www.rfa.org/mandarin/Xinwen/4-06022023114919.htmlhttps://www.rfa.org/mandarin/Xinwen/4-06022023114919.html图为美国军所属的P-3“獵戶座”海上巡邏機部署在菲律宾西部公主港的基地路透社资料图片据美国《华尔街日报》6月2日报道，为应对来自中国不断增大的军事挑战，美国已在亚洲采取新的军事策略，包括增多前哨基地，以摆脱对大型军事基地的严重依赖。这个周末，由多国国防部长出席的香格里拉对话会将拉开帷幕，中国日益增强的军力和美国在亚洲的军事存在预计将成为会议的主题之一。而中国日前拒绝了美国提出的有关两国防长在会议期间举行会晤的要求。报道说，随着中国导弹库日渐扩大，技术越发先进，美军在亚洲的大型基地日益面临危险。而通过将武器装备、部队和指挥所分散到较小的前哨基地，美国希望使中国更难通过削弱任何单一军事设施来发动打击。根据五角大楼估算，中国现有超过1300枚弹道导弹可用于打击亚太地区目标，其中超过250枚可打到美国在关岛的主要军事基地。责编：何平Fri,02Jun202311:55:00-0400中国部分民航班机偏航金门　台军方：因天气影响https://www.rfa.org/mandarin/Xinwen/3-06022023114332.htmlhttps://www.rfa.org/mandarin/Xinwen/3-06022023114332.html中国部分民航班机6月2日有向金门附近空域偏航的状况。原圖截自flightradar24.com网站据台湾中央社6月2日报道，台湾军方当天中午监测发现，中国部分民航班机有向金门附近空域偏航的状况。台湾的国防部发布新闻稿指出，国军监侦单位中午发现大陆东南沿海民航班机有部分偏航状况，即与民航单位查证，获悉上海飞航情报区已告知台湾民航单位，受天气因素影响，部分民航班机将向金门附近空域偏航。台湾军方表示，将持续与民航单位协同密切监控，确保台湾的空防安全。责编：何平Fri,02Jun202311:48:00-0400维权网发布《中国大陆在押政治犯、良心犯月度报告》　涉1563人https://www.rfa.org/mandarin/Xinwen/2-06022023114004.htmlhttps://www.rfa.org/mandarin/Xinwen/2-06022023114004.html维权网本周三（5月31日）发布《中国大陆在押政治犯、良心犯月度报告》。维权网官网截图维权网本周三（5月31日）发布《中国大陆在押政治犯、良心犯月度报告》。报告通过实名统计，由死刑正在核准、死缓、无期徒刑至有期徒刑、刑期不详及羁押未判等进行统计，共涉及汉、藏、维、哈萨克、回、蒙古、朝鲜、满等多族裔政治犯和良心犯1563人。报告特别指出，著名人权捍卫者郭飞雄（本名杨茂东）5月11日被广州市中级法院判处有期徒刑8年，剥夺政治权利3年。郭飞雄本次入狱是因要求赴美照顾病危妻子。与此同时，香港居民覃秋艳（妮可）因参与南方公民行动、香港“反送中”运动和公民聚会等，目前获悉于2021年4月遭广西柳州市警方拘捕后，目前已被判刑6年。此外，武汉公民记者方斌遭当局秘密判刑3年后，于4月30日刑满获释，但并未获得完全自由。广州南方街头运动倡导者之一王爱忠5月18日被广州市天河区法院以“寻衅滋事罪”判刑3年。报告还指出，中共当局针对法轮功的残酷镇压仍在持续，但法轮功学员的反抗也依然一如既往、毫不畏惧，法轮功学员也是该报告每月收集到遭当局判刑数量最大的群体。维权网强调，一个国家的政治犯和良心犯的境况是其最重要的人权指标之一，该报告通过定期统计和发布最新信息，揭示中国大陆当下恶劣的人权概况与良心犯、政治犯的悲惨处境，力求唤起国际社会对中国在押政治犯和良心犯的记忆，并予以持续不断的关注和呼吁，直至他们获得自由。编辑：何平Fri,02Jun202311:42:00-0400余文生妻子许艳被加控“煽动颠覆”后　看守所拒绝律师会见https://www.rfa.org/mandarin/Xinwen/1-06022023113611.htmlhttps://www.rfa.org/mandarin/Xinwen/1-06022023113611.html被加控"煽颠"的许艳与丈夫余文生合影推特/余文生律师妻子许艳@xuyan709据中国民间权益组织民生观察6月1日发布的消息，人权律师余文生的妻子许艳近日被北京市公安局石景山分局加控“煽动颠覆国家政权”等新罪名后，律师提前一天预约会见，但被看守所以公安临时提讯为由拒绝。此前有知情人士向本台透露，许艳被加控“煽颠”的罪名性质远比所谓的“寻衅滋事”严重，许艳也是第一位被当局抓捕并被追究刑事责任的“709大抓捕”案件受害律师家属。据悉，余文生、许艳夫妇在4月13日应邀前往欧盟驻京使馆途中，在搭乘地铁时被4名身穿便衣的国保人员拦截。其中一名国保宣称，要对他们进行口头传唤。两天后，多名警察前往余文生住处搜查，并向他刚满18岁的儿子宣读了俩人的刑事拘留通知书。民生观察披露，余文生、许艳俩人被批捕可能与声援遭重判的许志永和丁家喜有关，目前一些人权律师已被当局警告不能代理该案。责编：何平Fri,02Jun202311:38:00-0400据路透社6月2日报道，美国国家安全顾问杰克·沙利文（JakeSullivan）当天向军备控制协会倡导组织发表讲话时表示，美国无需更多核武器来威慑俄罗斯与中国加在一起的武装力量，因为美国具有先进的军事能力。沙利文还表示，只要莫斯科能保持一致，华盛顿将遵守2010年有关战略核武器限制条约的规定，直到该条约2026年到期，并且美国希望与中俄两国举行军备控制谈判。报道说，中国在扩大其核武库的同时，与美国在台湾问题上也处于紧张对峙状态。中方拒绝与华盛顿进行减少冲突风险的对话，本周更拒绝了两国防长在新加坡香格里拉对话会期间的会谈。根据五角大楼估算，到2035年，中国的核武库可能会增加两倍以上，达到1500枚核弹头。而威胁要在对乌克兰战争中使用核武器的俄罗斯，今年2月已宣布暂停参与上述战略核武器限制条约。沙利文表示，美国不需要将核力量增加到超过竞争对手的总和才能成功威慑他们，也不需要部署更加危险的核武器来维持威慑，威慑意味着有“更好”的方法，而不是“更多”的方法。但他强调，上述战略核武器限制条约必须考虑到中国不断增长的核武库问题。责编：何平据本台英语部发自新加坡的报道，在南海和东亚紧张局势升级之际，新加坡举办的重要地区安全论坛“香格里拉对话会”格外引人注目。但会议期间，美中两国防长面对面交流的大门却依然关闭。美国国防部长奥斯汀此前邀请中国国防部长李尚福在新加坡香格里拉对话期间举行双边会谈，但被中国防长拒绝。奥斯汀在抵达新加坡前，以“不幸”形容中方的决定。他表示，拥有强大能力的国家相互对话很重要，以此可管理危机并防止事态失控。据悉，本届为期三天的“香格里拉对话”有来自49个国家的约600位代表与会，美中防长将分别发表演说。另据台湾中央社报道，美国防长奥斯汀与中国防长李尚福等人在周五新加坡晚宴上同坐主桌。先抵达会场的奥斯汀在李尚福到场后主动向前握手致意，但未有太多互动。责编：何平为应对朝鲜发射“军事侦察卫星”以及可能的飞行物散落物体等，日本军方早在数周前即已在冲绳县多个岛屿部署爱国者地对空拦截导弹。但有日本媒体认为，此举是考虑到与台湾突发事态有关的中国大陆，而进行的部队活动“预演”。据共同社6月2日报道，日本防卫相滨田靖一当天回答有关朝鲜发射“卫星”后，原计划在石垣岛展开活动的填埋地“南NU滨”，为何没有“爱国者3”导弹的踪影等问题。滨田靖一仅表示，“对于运用的详情不予回答”。据报道，日本防卫省在4月下旬已经向冲绳县的宫古、石垣、与那国三岛的自卫队设施运进“爱国者3”导弹。但因气候原因，石垣岛没有把导弹系统部署在设施外部，而在宫古岛和与那国岛上的拦截导弹发射器则呈收起状态。共同社指出，日本政府出于对中国军力增强及台湾发生突发事态的担忧，正在加强西南诸岛的防卫能力。有自卫队干部披露，此举是“把朝鲜发射作为借口，实际上是设想台湾突发事态而移动了部队。”责编：何平据中国民间权益组织民生观察6月2日引述知情人士披露，维权团体“疫苗宝宝之家”发起人何方美因在2020年10月9日，带着疫苗致残的女儿前往河南辉县政府门前泼油漆抗议，被警察当场带走并刑拘后，目前该案仍未宣判，何方美本人则处在被超期羁押中，而她的两个女儿仍滞留在精神病院。据介绍，何方美因1岁10月大的女儿于2018年3月，在河南辉县接种甲肝、麻腮风、百白破疫苗后,导致病毒性脊髓炎而瘫痪。多方求助投诉均被拒后，夫妇俩人在北京一边为女儿治病，一边上访维权，并因此屡遭当局打压。民生观察披露，近日何方美写信请姐姐照顾孩子，可医院和警察都不让姐姐探望。家属就此呼吁当局，孩子们是无辜的，他们应该和家人一起生活。此外，有网友发起“六一明信片行动，接孩子回家”，通过网络声援人权捍卫者何方美。责编：何平中国六四事件34周年之际，美国众议院外交事务委员会印太小组主席金映玉（YoungKim）和该小组首席议员阿米·贝拉（AmiBera）提出一项跨党派决议，以纪念1989年天安门广场大屠杀的受害者，并谴责中国共产党继续在大陆及香港打压人权和基本自由。金映玉众议员表示，“我们永远不会忘记那些，面对压迫政权而在天安门广场与人民解放军面对面的勇敢的学生们。三十多年后，我们通过支持那些仍然被困在中国共产党威权主义下、但却热爱自由的人们，来缅怀受害者并纪念他们的遗产。”她强调，该决议向外界发出一致信息，即美国将继续成为世界舞台上自由、希望和机会的灯塔。据悉，上述决议案敦促中共当局停止对六四事件进行言论审查，接受联合国人权高专进行的独立调查，并允许流亡海外的六四参与者能在不面临报复风险的情况下返回中国。该决议同时呼吁香港政府及北京当局，尊重港人权利、自由以及香港法治体系的独立性，并依据《中英联合声明》与《基本法》有关“一国两制”的承诺，恢复香港独立的民选代表。上述议案还同时获得其他11位美国两党众议员的联署支持。责编：何平总部位于美国纽约的国际人权组织人权观察在六四事件34周年前夕发表声明，敦促中国政府承认大规模杀害民主运动示威者的责任，并为死难者及其家属提供赔偿。声明指出，当全球民众悼念1989年北京六四屠杀之际，中国当局正日益积极抹消相关记忆，并从六四周年的几星期前就开始防堵民间悼念。各地维权人士和六四死难者亲属团体“天安门母亲”的成员，均遭限制行动与对外联系。而中国政府从未承认对屠杀负责，也从未追究任何官员的法律责任，既无意调查相关事件，也不愿公布被杀死、杀伤、强迫失踪或入狱者的资料。人权观察表示，对六四屠杀及其后续镇压缺乏长期一致的国际应对，是导致北京当局日益明目张胆侵犯人权的因素之一。作为多部国际人权条约缔约国以及联合国人权理事会现任成员，中国有义务“维护人权的最高标准”。人权观察敦促中国政府尊重言论、结社自由与和平集会的权利，停止对质疑六四屠杀官方说法的人士加以骚扰和任意拘留；向“天安门母亲”成员道歉，公布所有死难者名单，并向死难者家属提供赔偿；批准对六四及后续事件进行公开独立调查，并迅速公布调查结果与结论；允许涉及八九民运而流亡海外的中国公民不受阻碍返国；以及调查所有参与策划或下令对示威群众非法使用致命武力的政府与军方官员，并予以起诉。责编：何平据美国《华尔街日报》6月2日报道，为应对来自中国不断增大的军事挑战，美国已在亚洲采取新的军事策略，包括增多前哨基地，以摆脱对大型军事基地的严重依赖。这个周末，由多国国防部长出席的香格里拉对话会将拉开帷幕，中国日益增强的军力和美国在亚洲的军事存在预计将成为会议的主题之一。而中国日前拒绝了美国提出的有关两国防长在会议期间举行会晤的要求。报道说，随着中国导弹库日渐扩大，技术越发先进，美军在亚洲的大型基地日益面临危险。而通过将武器装备、部队和指挥所分散到较小的前哨基地，美国希望使中国更难通过削弱任何单一军事设施来发动打击。根据五角大楼估算，中国现有超过1300枚弹道导弹可用于打击亚太地区目标，其中超过250枚可打到美国在关岛的主要军事基地。责编：何平据台湾中央社6月2日报道，台湾军方当天中午监测发现，中国部分民航班机有向金门附近空域偏航的状况。台湾的国防部发布新闻稿指出，国军监侦单位中午发现大陆东南沿海民航班机有部分偏航状况，即与民航单位查证，获悉上海飞航情报区已告知台湾民航单位，受天气因素影响，部分民航班机将向金门附近空域偏航。台湾军方表示，将持续与民航单位协同密切监控，确保台湾的空防安全。责编：何平维权网本周三（5月31日）发布《中国大陆在押政治犯、良心犯月度报告》。报告通过实名统计，由死刑正在核准、死缓、无期徒刑至有期徒刑、刑期不详及羁押未判等进行统计，共涉及汉、藏、维、哈萨克、回、蒙古、朝鲜、满等多族裔政治犯和良心犯1563人。报告特别指出，著名人权捍卫者郭飞雄（本名杨茂东）5月11日被广州市中级法院判处有期徒刑8年，剥夺政治权利3年。郭飞雄本次入狱是因要求赴美照顾病危妻子。与此同时，香港居民覃秋艳（妮可）因参与南方公民行动、香港“反送中”运动和公民聚会等，目前获悉于2021年4月遭广西柳州市警方拘捕后，目前已被判刑6年。此外，武汉公民记者方斌遭当局秘密判刑3年后，于4月30日刑满获释，但并未获得完全自由。广州南方街头运动倡导者之一王爱忠5月18日被广州市天河区法院以“寻衅滋事罪”判刑3年。报告还指出，中共当局针对法轮功的残酷镇压仍在持续，但法轮功学员的反抗也依然一如既往、毫不畏惧，法轮功学员也是该报告每月收集到遭当局判刑数量最大的群体。维权网强调，一个国家的政治犯和良心犯的境况是其最重要的人权指标之一，该报告通过定期统计和发布最新信息，揭示中国大陆当下恶劣的人权概况与良心犯、政治犯的悲惨处境，力求唤起国际社会对中国在押政治犯和良心犯的记忆，并予以持续不断的关注和呼吁，直至他们获得自由。编辑：何平据中国民间权益组织民生观察6月1日发布的消息，人权律师余文生的妻子许艳近日被北京市公安局石景山分局加控“煽动颠覆国家政权”等新罪名后，律师提前一天预约会见，但被看守所以公安临时提讯为由拒绝。此前有知情人士向本台透露，许艳被加控“煽颠”的罪名性质远比所谓的“寻衅滋事”严重，许艳也是第一位被当局抓捕并被追究刑事责任的“709大抓捕”案件受害律师家属。据悉，余文生、许艳夫妇在4月13日应邀前往欧盟驻京使馆途中，在搭乘地铁时被4名身穿便衣的国保人员拦截。其中一名国保宣称，要对他们进行口头传唤。两天后，多名警察前往余文生住处搜查，并向他刚满18岁的儿子宣读了俩人的刑事拘留通知书。民生观察披露，余文生、许艳俩人被批捕可能与声援遭重判的许志永和丁家喜有关，目前一些人权律师已被当局警告不能代理该案。责编：何平```0
+  ## Invalid Date - [美防长对中国不愿接触表示“深切关注” 北京指责美国破坏台海稳定沙利文：威慑中俄  美国无需更多核武香格里拉对话会：中方拒绝对话 奥斯汀称之“不幸”日本在冲绳部署爱国者导弹  日媒：考虑到中国与台海局势“疫苗宝宝之家” 发起人何方美遭超期羁押 女儿滞留精神病院美国跨党派议员提案：悼念六四  谴责中共打压人权六四事件34周年　人权组织敦促中国政府承认屠城责任《华尔街日报》：美国在亚洲建立前哨基地应对中国导弹威胁](https://www.rfa.org/mandarin/Xinwen/1-06032023094945.htmlhttps://www.rfa.org/mandarin/Xinwen/10-06022023165710.htmlhttps://www.rfa.org/mandarin/Xinwen/9-06022023165555.htmlhttps://www.rfa.org/mandarin/Xinwen/8-06022023165445.htmlhttps://www.rfa.org/mandarin/Xinwen/7-06022023165330.htmlhttps://www.rfa.org/mandarin/Xinwen/6-06022023165228.htmlhttps://www.rfa.org/mandarin/Xinwen/5-06022023115605.htmlhttps://www.rfa.org/mandarin/Xinwen/4-06022023114919.html)
+ ```据本台英语组报道，美国国防部长劳埃德·奥斯汀在与中国国防部长会面的呼吁遭到拒绝后，敦促中国军方领导人进行接触，称开放的沟通渠道“至关重要”。奥斯汀周六在新加坡香格里拉对话安全论坛上发表重要讲话时说，他“深感关切的是，中国一直不愿更认真地参与我们两国军队之间更好的危机管理机制。”美国国防部长在提到中国时使用的正式名称是中华人民共和国。他说，“对于负责任的国防领导人来说，合适的谈话时间是任何时候，合适的谈话时间是每次，现在是合适的谈话时间，”他并补充说“对话不是奖励。 这是必须的。”“我们谈得越多，就越能避免可能导致危机或冲突的误解和误判。”美国国防部长奥斯汀和自 2018 年以来一直受到美国制裁的中国国防部长李尚福，在周五的正式晚宴前进行了简短的握手，但没有交谈，也没有预计他们之间会举行双边会谈。“晚餐时亲切的握手不能替代实质性的参与，”奥斯汀说。美国国防部长抨击了中国，他说中国“继续对在国际领空合法飞行的美国和盟国飞机进行数量惊人的危险拦截。”就在上周，美国军方指责中国的J-16战斗机在拦截美国空军RC-135侦察机时进行了“不必要的攻击性”机动。“我们不寻求冲突或对抗，但面对欺凌或胁迫，我们不会退缩，”奥斯汀说。美国战略与国际研究中心 (CSIS) 非常驻研究员 HuongLeThu 说，两个大国之间明显的裂痕已经“成为新的现实”。HuongLeThu 告诉自由亚洲电台，无论“他们喜欢与否”，地区国家都必须接受它。“但他们可以通过促进和鼓励美中之间的对话来降低热度，从而有助于控制紧张局势，”这位研究员补充说。共同愿景菲律宾国防部高级副部长兼主管官员小卡利托·加尔维斯 (CarlitoGalvezJr.) 表示，马尼拉认为“国际法是各国之间最大的平衡器”。菲律宾于 2016 年在联合国法庭赢得了针对中国在南中国海的主张的法律诉讼，但北京迄今拒绝接受该裁决。两国最近因在南沙群岛的一些岛屿的主权问题卷入了新的争端。“俗话说，好篱笆造就好邻居，”加尔维斯说，“只有当邻国有明确的界限并尊重既定界限时，关系才会真正友好。”印度尼西亚国防部长普拉博沃·苏比安托表示，“我们必须通过对话、谈判和双赢解决方案，来克服我们的地缘政治竞争和领土争端。”“妥协是社区和社会繁荣的唯一途径，”他说，并警告说超级大国之间的竞争“已经变成了冷战”，在任何战争中，“灾难的危险总是近在咫尺。”不过，美国国防部长奥斯汀坚称，美国“不寻求新冷战”。“竞争绝不能演变成冲突。 该地区永远不应分裂为敌对集团，”他说。奥斯汀表示，华盛顿并未像中国一再声称的那样在印太地区创建、并且也不愿意创建一个新的北约。然而，奥斯汀说，美国希望建立“灵活的联盟来推进我们的共同愿景”，以使印太地区“更加稳定和更有弹性”。华盛顿将澳大利亚、日本、韩国、菲律宾和泰国列为其在该地区的“坚定盟友”，并将印度、印度尼西亚、越南和新加坡视为“重要伙伴”。在谈到自治的台湾时，奥斯汀说，美国“仍然坚定地致力于维持那里的现状，这与我们长期以来的一个中国政策一致，并履行我们在《台湾关系法》下的既定义务。”“冲突既不是迫在眉睫也不是不可避免的。 今天的威慑力很强，我们的工作就是保持这种威慑力，” 奥斯汀说。北京将台湾视为中国的一个省，并坚决抗议“外部势力”参与台湾政治。中国的中央军委联合参谋部副部长景建峰中将对美国防长奥斯汀的涉台言论进行了回击，称其“完全错误”。“世界上只有一个中国，台湾是中国领土神圣不可分割的一部分，”完成祖国统一是包括台湾同胞在内的全体中国人民的共同愿望和神圣责任。 祖国的。”中国的反击中国人民解放军军事科学院研究员赵小卓大校表示，一直试图改变台海现状的是美国。赵在香格里拉对话会上对记者说：“台湾海峡在过去十年左右的时间里非常稳定，但美国想要破坏这种稳定。”“这样他们就可以向台湾出售武器并赚很多钱，”他说。新加坡安全论坛的中国与会者反击了美国及其盟友的批评。赵大校表示，华盛顿需要改变其与他人互动方式中他所说的“错误行为”。“在对话方面，你必须照顾对方的利益，”他说，并指责美方不理解这一基本原则。另一位中国代表、来自中国国防大学国家安全学院的张驰大校质疑华盛顿在建立多边机构的同时促进东南亚集团东盟的中心地位是否自相矛盾。与此同时，该学院前副校长唐永胜少将回击加拿大国防部长安妮塔·阿南德称中国是该地区的破坏性力量。他说“中国为维护该地区的和平与稳定做出了巨大努力”。中国共产党喉舌《环球时报》周六在一篇报道中援引中国军方一名官员的话说，“中国有信心走上舞台发声。”“尽管明知香格里拉对话会是西方国家主导的攻击中国的平台，但中国还是来了，”该报称。中国国防部长李尚福将于周日，也就是论坛的最后一天，就北京的新安全举措发表重要讲话。（责编：梒青）Sat,03Jun202309:51:00-0400沙利文：威慑中俄美国无需更多核武据路透社6月2日报道，美国国家安全顾问杰克·沙利文（JakeSullivan）当天向军备控制协会倡导组织发表讲话时表示，美国无需更多核武器来威慑俄罗斯与中国加在一起的武装力量，因为美国具有先进的军事能力。https://www.rfa.org/mandarin/Xinwen/10-06022023165710.htmlhttps://www.rfa.org/mandarin/Xinwen/10-06022023165710.html图为美国空军的義勇兵III型洲际弹道导弹，可用于投射核弹头。路透社资料图片据路透社6月2日报道，美国国家安全顾问杰克·沙利文（JakeSullivan）当天向军备控制协会倡导组织发表讲话时表示，美国无需更多核武器来威慑俄罗斯与中国加在一起的武装力量，因为美国具有先进的军事能力。沙利文还表示，只要莫斯科能保持一致，华盛顿将遵守2010年有关战略核武器限制条约的规定，直到该条约2026年到期，并且美国希望与中俄两国举行军备控制谈判。报道说，中国在扩大其核武库的同时，与美国在台湾问题上也处于紧张对峙状态。中方拒绝与华盛顿进行减少冲突风险的对话，本周更拒绝了两国防长在新加坡香格里拉对话会期间的会谈。根据五角大楼估算，到2035年，中国的核武库可能会增加两倍以上，达到1500枚核弹头。而威胁要在对乌克兰战争中使用核武器的俄罗斯，今年2月已宣布暂停参与上述战略核武器限制条约。沙利文表示，美国不需要将核力量增加到超过竞争对手的总和才能成功威慑他们，也不需要部署更加危险的核武器来维持威慑，威慑意味着有“更好”的方法，而不是“更多”的方法。但他强调，上述战略核武器限制条约必须考虑到中国不断增长的核武库问题。责编：何平Fri,02Jun202316:57:00-0400香格里拉对话会：中方拒绝对话奥斯汀称之“不幸”据本台英语部发自新加坡的报道，在南海和东亚紧张局势升级之际，新加坡举办的重要地区安全论坛“香格里拉对话会”格外引人注目。但会议期间，美中两国防长面对面交流的大门却依然关闭。https://www.rfa.org/mandarin/Xinwen/9-06022023165555.htmlhttps://www.rfa.org/mandarin/Xinwen/9-06022023165555.html美国防长奥斯汀与中国防长李尚福等人在周五新加坡晚宴上同坐主桌。路透社图片据本台英语部发自新加坡的报道，在南海和东亚紧张局势升级之际，新加坡举办的重要地区安全论坛“香格里拉对话会”格外引人注目。但会议期间，美中两国防长面对面交流的大门却依然关闭。美国国防部长奥斯汀此前邀请中国国防部长李尚福在新加坡香格里拉对话期间举行双边会谈，但被中国防长拒绝。奥斯汀在抵达新加坡前，以“不幸”形容中方的决定。他表示，拥有强大能力的国家相互对话很重要，以此可管理危机并防止事态失控。据悉，本届为期三天的“香格里拉对话”有来自49个国家的约600位代表与会，美中防长将分别发表演说。另据台湾中央社报道，美国防长奥斯汀与中国防长李尚福等人在周五新加坡晚宴上同坐主桌。先抵达会场的奥斯汀在李尚福到场后主动向前握手致意，但未有太多互动。责编：何平Fri,02Jun202316:56:00-0400日本在冲绳部署爱国者导弹日媒：考虑到中国与台海局势https://www.rfa.org/mandarin/Xinwen/8-06022023165445.htmlhttps://www.rfa.org/mandarin/Xinwen/8-06022023165445.html日本自卫队士兵走过一具“爱国者”-3导弹发射单位路透社资料图片为应对朝鲜发射“军事侦察卫星”以及可能的飞行物散落物体等，日本军方早在数周前即已在冲绳县多个岛屿部署爱国者地对空拦截导弹。但有日本媒体认为，此举是考虑到与台湾突发事态有关的中国大陆，而进行的部队活动“预演”。据共同社6月2日报道，日本防卫相滨田靖一当天回答有关朝鲜发射“卫星”后，原计划在石垣岛展开活动的填埋地“南NU滨”，为何没有“爱国者3”导弹的踪影等问题。滨田靖一仅表示，“对于运用的详情不予回答”。据报道，日本防卫省在4月下旬已经向冲绳县的宫古、石垣、与那国三岛的自卫队设施运进“爱国者3”导弹。但因气候原因，石垣岛没有把导弹系统部署在设施外部，而在宫古岛和与那国岛上的拦截导弹发射器则呈收起状态。共同社指出，日本政府出于对中国军力增强及台湾发生突发事态的担忧，正在加强西南诸岛的防卫能力。有自卫队干部披露，此举是“把朝鲜发射作为借口，实际上是设想台湾突发事态而移动了部队。”责编：何平Fri,02Jun202316:54:00-0400“疫苗宝宝之家”发起人何方美遭超期羁押女儿滞留精神病院https://www.rfa.org/mandarin/Xinwen/7-06022023165330.htmlhttps://www.rfa.org/mandarin/Xinwen/7-06022023165330.html“疫苗宝宝之家”发起人何方美何方美推特截图据中国民间权益组织民生观察6月2日引述知情人士披露，维权团体“疫苗宝宝之家”发起人何方美因在2020年10月9日，带着疫苗致残的女儿前往河南辉县政府门前泼油漆抗议，被警察当场带走并刑拘后，目前该案仍未宣判，何方美本人则处在被超期羁押中，而她的两个女儿仍滞留在精神病院。据介绍，何方美因1岁10月大的女儿于2018年3月，在河南辉县接种甲肝、麻腮风、百白破疫苗后,导致病毒性脊髓炎而瘫痪。多方求助投诉均被拒后，夫妇俩人在北京一边为女儿治病，一边上访维权，并因此屡遭当局打压。民生观察披露，近日何方美写信请姐姐照顾孩子，可医院和警察都不让姐姐探望。家属就此呼吁当局，孩子们是无辜的，他们应该和家人一起生活。此外，有网友发起“六一明信片行动，接孩子回家”，通过网络声援人权捍卫者何方美。责编：何平Fri,02Jun202316:53:00-0400美国跨党派议员提案：悼念六四谴责中共打压人权https://www.rfa.org/mandarin/Xinwen/6-06022023165228.htmlhttps://www.rfa.org/mandarin/Xinwen/6-06022023165228.html美国众议院外交事务委员会印太小组主席金映玉（YoungKim）(图左)，和该小组首席议员阿米·贝拉（AmiBera）。维基百科/RFA组图中国六四事件34周年之际，美国众议院外交事务委员会印太小组主席金映玉（YoungKim）和该小组首席议员阿米·贝拉（AmiBera）提出一项跨党派决议，以纪念1989年天安门广场大屠杀的受害者，并谴责中国共产党继续在大陆及香港打压人权和基本自由。金映玉众议员表示，“我们永远不会忘记那些，面对压迫政权而在天安门广场与人民解放军面对面的勇敢的学生们。三十多年后，我们通过支持那些仍然被困在中国共产党威权主义下、但却热爱自由的人们，来缅怀受害者并纪念他们的遗产。”她强调，该决议向外界发出一致信息，即美国将继续成为世界舞台上自由、希望和机会的灯塔。据悉，上述决议案敦促中共当局停止对六四事件进行言论审查，接受联合国人权高专进行的独立调查，并允许流亡海外的六四参与者能在不面临报复风险的情况下返回中国。该决议同时呼吁香港政府及北京当局，尊重港人权利、自由以及香港法治体系的独立性，并依据《中英联合声明》与《基本法》有关“一国两制”的承诺，恢复香港独立的民选代表。上述议案还同时获得其他11位美国两党众议员的联署支持。责编：何平Fri,02Jun202316:52:00-0400六四事件34周年　人权组织敦促中国政府承认屠城责任总部位于美国纽约的国际人权组织人权观察在六四事件34周年前夕发表声明，敦促中国政府承认大规模杀害民主运动示威者的责任，并为死难者及其家属提供赔偿。https://www.rfa.org/mandarin/Xinwen/5-06022023115605.htmlhttps://www.rfa.org/mandarin/Xinwen/5-06022023115605.html国际人权组织人权观察在六四事件34周年前夕发表声明，敦促中国政府承认大规模杀害民主运动示威者的责任。HumanRightsWatch官网截图总部位于美国纽约的国际人权组织人权观察在六四事件34周年前夕发表声明，敦促中国政府承认大规模杀害民主运动示威者的责任，并为死难者及其家属提供赔偿。声明指出，当全球民众悼念1989年北京六四屠杀之际，中国当局正日益积极抹消相关记忆，并从六四周年的几星期前就开始防堵民间悼念。各地维权人士和六四死难者亲属团体“天安门母亲”的成员，均遭限制行动与对外联系。而中国政府从未承认对屠杀负责，也从未追究任何官员的法律责任，既无意调查相关事件，也不愿公布被杀死、杀伤、强迫失踪或入狱者的资料。人权观察表示，对六四屠杀及其后续镇压缺乏长期一致的国际应对，是导致北京当局日益明目张胆侵犯人权的因素之一。作为多部国际人权条约缔约国以及联合国人权理事会现任成员，中国有义务“维护人权的最高标准”。人权观察敦促中国政府尊重言论、结社自由与和平集会的权利，停止对质疑六四屠杀官方说法的人士加以骚扰和任意拘留；向“天安门母亲”成员道歉，公布所有死难者名单，并向死难者家属提供赔偿；批准对六四及后续事件进行公开独立调查，并迅速公布调查结果与结论；允许涉及八九民运而流亡海外的中国公民不受阻碍返国；以及调查所有参与策划或下令对示威群众非法使用致命武力的政府与军方官员，并予以起诉。责编：何平Fri,02Jun202311:59:00-0400《华尔街日报》：美国在亚洲建立前哨基地应对中国导弹威胁据美国《华尔街日报》6月2日报道，为应对来自中国不断增大的军事挑战，美国已在亚洲采取新的军事策略，包括增多前哨基地，以摆脱对大型军事基地的严重依赖。https://www.rfa.org/mandarin/Xinwen/4-06022023114919.htmlhttps://www.rfa.org/mandarin/Xinwen/4-06022023114919.html图为美国军所属的P-3“獵戶座”海上巡邏機部署在菲律宾西部公主港的基地路透社资料图片据美国《华尔街日报》6月2日报道，为应对来自中国不断增大的军事挑战，美国已在亚洲采取新的军事策略，包括增多前哨基地，以摆脱对大型军事基地的严重依赖。这个周末，由多国国防部长出席的香格里拉对话会将拉开帷幕，中国日益增强的军力和美国在亚洲的军事存在预计将成为会议的主题之一。而中国日前拒绝了美国提出的有关两国防长在会议期间举行会晤的要求。报道说，随着中国导弹库日渐扩大，技术越发先进，美军在亚洲的大型基地日益面临危险。而通过将武器装备、部队和指挥所分散到较小的前哨基地，美国希望使中国更难通过削弱任何单一军事设施来发动打击。根据五角大楼估算，中国现有超过1300枚弹道导弹可用于打击亚太地区目标，其中超过250枚可打到美国在关岛的主要军事基地。责编：何平Fri,02Jun202311:55:00-0400据路透社6月2日报道，美国国家安全顾问杰克·沙利文（JakeSullivan）当天向军备控制协会倡导组织发表讲话时表示，美国无需更多核武器来威慑俄罗斯与中国加在一起的武装力量，因为美国具有先进的军事能力。沙利文还表示，只要莫斯科能保持一致，华盛顿将遵守2010年有关战略核武器限制条约的规定，直到该条约2026年到期，并且美国希望与中俄两国举行军备控制谈判。报道说，中国在扩大其核武库的同时，与美国在台湾问题上也处于紧张对峙状态。中方拒绝与华盛顿进行减少冲突风险的对话，本周更拒绝了两国防长在新加坡香格里拉对话会期间的会谈。根据五角大楼估算，到2035年，中国的核武库可能会增加两倍以上，达到1500枚核弹头。而威胁要在对乌克兰战争中使用核武器的俄罗斯，今年2月已宣布暂停参与上述战略核武器限制条约。沙利文表示，美国不需要将核力量增加到超过竞争对手的总和才能成功威慑他们，也不需要部署更加危险的核武器来维持威慑，威慑意味着有“更好”的方法，而不是“更多”的方法。但他强调，上述战略核武器限制条约必须考虑到中国不断增长的核武库问题。责编：何平据本台英语部发自新加坡的报道，在南海和东亚紧张局势升级之际，新加坡举办的重要地区安全论坛“香格里拉对话会”格外引人注目。但会议期间，美中两国防长面对面交流的大门却依然关闭。美国国防部长奥斯汀此前邀请中国国防部长李尚福在新加坡香格里拉对话期间举行双边会谈，但被中国防长拒绝。奥斯汀在抵达新加坡前，以“不幸”形容中方的决定。他表示，拥有强大能力的国家相互对话很重要，以此可管理危机并防止事态失控。据悉，本届为期三天的“香格里拉对话”有来自49个国家的约600位代表与会，美中防长将分别发表演说。另据台湾中央社报道，美国防长奥斯汀与中国防长李尚福等人在周五新加坡晚宴上同坐主桌。先抵达会场的奥斯汀在李尚福到场后主动向前握手致意，但未有太多互动。责编：何平为应对朝鲜发射“军事侦察卫星”以及可能的飞行物散落物体等，日本军方早在数周前即已在冲绳县多个岛屿部署爱国者地对空拦截导弹。但有日本媒体认为，此举是考虑到与台湾突发事态有关的中国大陆，而进行的部队活动“预演”。据共同社6月2日报道，日本防卫相滨田靖一当天回答有关朝鲜发射“卫星”后，原计划在石垣岛展开活动的填埋地“南NU滨”，为何没有“爱国者3”导弹的踪影等问题。滨田靖一仅表示，“对于运用的详情不予回答”。据报道，日本防卫省在4月下旬已经向冲绳县的宫古、石垣、与那国三岛的自卫队设施运进“爱国者3”导弹。但因气候原因，石垣岛没有把导弹系统部署在设施外部，而在宫古岛和与那国岛上的拦截导弹发射器则呈收起状态。共同社指出，日本政府出于对中国军力增强及台湾发生突发事态的担忧，正在加强西南诸岛的防卫能力。有自卫队干部披露，此举是“把朝鲜发射作为借口，实际上是设想台湾突发事态而移动了部队。”责编：何平据中国民间权益组织民生观察6月2日引述知情人士披露，维权团体“疫苗宝宝之家”发起人何方美因在2020年10月9日，带着疫苗致残的女儿前往河南辉县政府门前泼油漆抗议，被警察当场带走并刑拘后，目前该案仍未宣判，何方美本人则处在被超期羁押中，而她的两个女儿仍滞留在精神病院。据介绍，何方美因1岁10月大的女儿于2018年3月，在河南辉县接种甲肝、麻腮风、百白破疫苗后,导致病毒性脊髓炎而瘫痪。多方求助投诉均被拒后，夫妇俩人在北京一边为女儿治病，一边上访维权，并因此屡遭当局打压。民生观察披露，近日何方美写信请姐姐照顾孩子，可医院和警察都不让姐姐探望。家属就此呼吁当局，孩子们是无辜的，他们应该和家人一起生活。此外，有网友发起“六一明信片行动，接孩子回家”，通过网络声援人权捍卫者何方美。责编：何平中国六四事件34周年之际，美国众议院外交事务委员会印太小组主席金映玉（YoungKim）和该小组首席议员阿米·贝拉（AmiBera）提出一项跨党派决议，以纪念1989年天安门广场大屠杀的受害者，并谴责中国共产党继续在大陆及香港打压人权和基本自由。金映玉众议员表示，“我们永远不会忘记那些，面对压迫政权而在天安门广场与人民解放军面对面的勇敢的学生们。三十多年后，我们通过支持那些仍然被困在中国共产党威权主义下、但却热爱自由的人们，来缅怀受害者并纪念他们的遗产。”她强调，该决议向外界发出一致信息，即美国将继续成为世界舞台上自由、希望和机会的灯塔。据悉，上述决议案敦促中共当局停止对六四事件进行言论审查，接受联合国人权高专进行的独立调查，并允许流亡海外的六四参与者能在不面临报复风险的情况下返回中国。该决议同时呼吁香港政府及北京当局，尊重港人权利、自由以及香港法治体系的独立性，并依据《中英联合声明》与《基本法》有关“一国两制”的承诺，恢复香港独立的民选代表。上述议案还同时获得其他11位美国两党众议员的联署支持。责编：何平总部位于美国纽约的国际人权组织人权观察在六四事件34周年前夕发表声明，敦促中国政府承认大规模杀害民主运动示威者的责任，并为死难者及其家属提供赔偿。声明指出，当全球民众悼念1989年北京六四屠杀之际，中国当局正日益积极抹消相关记忆，并从六四周年的几星期前就开始防堵民间悼念。各地维权人士和六四死难者亲属团体“天安门母亲”的成员，均遭限制行动与对外联系。而中国政府从未承认对屠杀负责，也从未追究任何官员的法律责任，既无意调查相关事件，也不愿公布被杀死、杀伤、强迫失踪或入狱者的资料。人权观察表示，对六四屠杀及其后续镇压缺乏长期一致的国际应对，是导致北京当局日益明目张胆侵犯人权的因素之一。作为多部国际人权条约缔约国以及联合国人权理事会现任成员，中国有义务“维护人权的最高标准”。人权观察敦促中国政府尊重言论、结社自由与和平集会的权利，停止对质疑六四屠杀官方说法的人士加以骚扰和任意拘留；向“天安门母亲”成员道歉，公布所有死难者名单，并向死难者家属提供赔偿；批准对六四及后续事件进行公开独立调查，并迅速公布调查结果与结论；允许涉及八九民运而流亡海外的中国公民不受阻碍返国；以及调查所有参与策划或下令对示威群众非法使用致命武力的政府与军方官员，并予以起诉。责编：何平据美国《华尔街日报》6月2日报道，为应对来自中国不断增大的军事挑战，美国已在亚洲采取新的军事策略，包括增多前哨基地，以摆脱对大型军事基地的严重依赖。这个周末，由多国国防部长出席的香格里拉对话会将拉开帷幕，中国日益增强的军力和美国在亚洲的军事存在预计将成为会议的主题之一。而中国日前拒绝了美国提出的有关两国防长在会议期间举行会晤的要求。报道说，随着中国导弹库日渐扩大，技术越发先进，美军在亚洲的大型基地日益面临危险。而通过将武器装备、部队和指挥所分散到较小的前哨基地，美国希望使中国更难通过削弱任何单一军事设施来发动打击。根据五角大楼估算，中国现有超过1300枚弹道导弹可用于打击亚太地区目标，其中超过250枚可打到美国在关岛的主要军事基地。责编：何平```0
   ## 6/2/2023 - [沙利文：威慑中俄  美国无需更多核武](https://www.rfa.org/mandarin/Xinwen/10-06022023165710.html)
  ```据路透社6月2日报道，美国国家安全顾问杰克·沙利文（JakeSullivan）当天向军备控制协会倡导组织发表讲话时表示，美国无需更多核武器来威慑俄罗斯与中国加在一起的武装力量，因为美国具有先进的军事能力。沙利文还表示，只要莫斯科能保持一致，华盛顿将遵守2010年有关战略核武器限制条约的规定，直到该条约2026年到期，并且美国希望与中俄两国举行军备控制谈判。报道说，中国在扩大其核武库的同时，与美国在台湾问题上也处于紧张对峙状态。中方拒绝与华盛顿进行减少冲突风险的对话，本周更拒绝了两国防长在新加坡香格里拉对话会期间的会谈。根据五角大楼估算，到2035年，中国的核武库可能会增加两倍以上，达到1500枚核弹头。而威胁要在对乌克兰战争中使用核武器的俄罗斯，今年2月已宣布暂停参与上述战略核武器限制条约。沙利文表示，美国不需要将核力量增加到超过竞争对手的总和才能成功威慑他们，也不需要部署更加危险的核武器来维持威慑，威慑意味着有“更好”的方法，而不是“更多”的方法。但他强调，上述战略核武器限制条约必须考虑到中国不断增长的核武库问题。责编：何平```0
   ## 6/2/2023 - [香格里拉对话会：中方拒绝对话 奥斯汀称之“不幸”](https://www.rfa.org/mandarin/Xinwen/9-06022023165555.html)
@@ -23,9 +29,3 @@
  ```总部位于美国纽约的国际人权组织人权观察在六四事件34周年前夕发表声明，敦促中国政府承认大规模杀害民主运动示威者的责任，并为死难者及其家属提供赔偿。声明指出，当全球民众悼念1989年北京六四屠杀之际，中国当局正日益积极抹消相关记忆，并从六四周年的几星期前就开始防堵民间悼念。各地维权人士和六四死难者亲属团体“天安门母亲”的成员，均遭限制行动与对外联系。而中国政府从未承认对屠杀负责，也从未追究任何官员的法律责任，既无意调查相关事件，也不愿公布被杀死、杀伤、强迫失踪或入狱者的资料。人权观察表示，对六四屠杀及其后续镇压缺乏长期一致的国际应对，是导致北京当局日益明目张胆侵犯人权的因素之一。作为多部国际人权条约缔约国以及联合国人权理事会现任成员，中国有义务“维护人权的最高标准”。人权观察敦促中国政府尊重言论、结社自由与和平集会的权利，停止对质疑六四屠杀官方说法的人士加以骚扰和任意拘留；向“天安门母亲”成员道歉，公布所有死难者名单，并向死难者家属提供赔偿；批准对六四及后续事件进行公开独立调查，并迅速公布调查结果与结论；允许涉及八九民运而流亡海外的中国公民不受阻碍返国；以及调查所有参与策划或下令对示威群众非法使用致命武力的政府与军方官员，并予以起诉。责编：何平```0
   ## 6/2/2023 - [《华尔街日报》：美国在亚洲建立前哨基地应对中国导弹威胁](https://www.rfa.org/mandarin/Xinwen/4-06022023114919.html)
  ```据美国《华尔街日报》6月2日报道，为应对来自中国不断增大的军事挑战，美国已在亚洲采取新的军事策略，包括增多前哨基地，以摆脱对大型军事基地的严重依赖。这个周末，由多国国防部长出席的香格里拉对话会将拉开帷幕，中国日益增强的军力和美国在亚洲的军事存在预计将成为会议的主题之一。而中国日前拒绝了美国提出的有关两国防长在会议期间举行会晤的要求。报道说，随着中国导弹库日渐扩大，技术越发先进，美军在亚洲的大型基地日益面临危险。而通过将武器装备、部队和指挥所分散到较小的前哨基地，美国希望使中国更难通过削弱任何单一军事设施来发动打击。根据五角大楼估算，中国现有超过1300枚弹道导弹可用于打击亚太地区目标，其中超过250枚可打到美国在关岛的主要军事基地。责编：何平```0
-  ## 6/2/2023 - [中国部分民航班机偏航金门　台军方：因天气影响](https://www.rfa.org/mandarin/Xinwen/3-06022023114332.html)
- ```据台湾中央社6月2日报道，台湾军方当天中午监测发现，中国部分民航班机有向金门附近空域偏航的状况。台湾的国防部发布新闻稿指出，国军监侦单位中午发现大陆东南沿海民航班机有部分偏航状况，即与民航单位查证，获悉上海飞航情报区已告知台湾民航单位，受天气因素影响，部分民航班机将向金门附近空域偏航。台湾军方表示，将持续与民航单位协同密切监控，确保台湾的空防安全。责编：何平```0
-  ## 6/2/2023 - [维权网发布《中国大陆在押政治犯、良心犯月度报告》　涉1563人](https://www.rfa.org/mandarin/Xinwen/2-06022023114004.html)
- ```维权网本周三（5月31日）发布《中国大陆在押政治犯、良心犯月度报告》。报告通过实名统计，由死刑正在核准、死缓、无期徒刑至有期徒刑、刑期不详及羁押未判等进行统计，共涉及汉、藏、维、哈萨克、回、蒙古、朝鲜、满等多族裔政治犯和良心犯1563人。报告特别指出，著名人权捍卫者郭飞雄（本名杨茂东）5月11日被广州市中级法院判处有期徒刑8年，剥夺政治权利3年。郭飞雄本次入狱是因要求赴美照顾病危妻子。与此同时，香港居民覃秋艳（妮可）因参与南方公民行动、香港“反送中”运动和公民聚会等，目前获悉于2021年4月遭广西柳州市警方拘捕后，目前已被判刑6年。此外，武汉公民记者方斌遭当局秘密判刑3年后，于4月30日刑满获释，但并未获得完全自由。广州南方街头运动倡导者之一王爱忠5月18日被广州市天河区法院以“寻衅滋事罪”判刑3年。报告还指出，中共当局针对法轮功的残酷镇压仍在持续，但法轮功学员的反抗也依然一如既往、毫不畏惧，法轮功学员也是该报告每月收集到遭当局判刑数量最大的群体。维权网强调，一个国家的政治犯和良心犯的境况是其最重要的人权指标之一，该报告通过定期统计和发布最新信息，揭示中国大陆当下恶劣的人权概况与良心犯、政治犯的悲惨处境，力求唤起国际社会对中国在押政治犯和良心犯的记忆，并予以持续不断的关注和呼吁，直至他们获得自由。编辑：何平```0
-  ## 6/2/2023 - [余文生妻子许艳被加控“煽动颠覆”后　看守所拒绝律师会见](https://www.rfa.org/mandarin/Xinwen/1-06022023113611.html)
- ```据中国民间权益组织民生观察6月1日发布的消息，人权律师余文生的妻子许艳近日被北京市公安局石景山分局加控“煽动颠覆国家政权”等新罪名后，律师提前一天预约会见，但被看守所以公安临时提讯为由拒绝。此前有知情人士向本台透露，许艳被加控“煽颠”的罪名性质远比所谓的“寻衅滋事”严重，许艳也是第一位被当局抓捕并被追究刑事责任的“709大抓捕”案件受害律师家属。据悉，余文生、许艳夫妇在4月13日应邀前往欧盟驻京使馆途中，在搭乘地铁时被4名身穿便衣的国保人员拦截。其中一名国保宣称，要对他们进行口头传唤。两天后，多名警察前往余文生住处搜查，并向他刚满18岁的儿子宣读了俩人的刑事拘留通知书。民生观察披露，余文生、许艳俩人被批捕可能与声援遭重判的许志永和丁家喜有关，目前一些人权律师已被当局警告不能代理该案。责编：何平```0
