--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,6 @@
 
+  ## 6/3/2023 - [以色列同埃及爆发边境冲突，造成4名军人死亡](https://www.voachinese.com/a/israel-egypt-border-clash-20230603/7121803.html)
+ ```官员们说，以色列军人星期六在南部与埃及的边境同一名埃及边防警卫发生枪战，导致三名以色列军人和这名埃及边防警卫死亡。```0
   ## 6/3/2023 - [美国在印太安全布局获得重大进展，专家：区域军力平衡可能向美国及盟友倾斜](https://www.voachinese.com/a/us-china-naval-power-balance-20230603/7121653.html)
  ```美国国防部长劳埃德·奥斯汀（LloydAustin）星期六（6月3日）在新加坡“香格里拉安全对话”上说，过去一年，美国和印太地区的盟友和伙伴在实现“自由、开放和安全的”印太地区愿景方面取得“历史性进展”，“现在威慑力强大”。主办“香格里拉对话”的英国智库国际战略研究所（IISS）此前一天公布新报告说，虽然中国的军力还在发展，但美国及其地区盟友在安全方面的努力正在改变印太地区的军力平衡，使其重新向美国和盟友倾斜。```0
   ## 6/3/2023 - [美中沟通渠道并未堵死：美助理国务卿和白宫国安会高官联袂访华
@@ -38,6 +40,3 @@
  ```美国中央情报局局长伯恩斯上个月曾秘密前往北京，这是拜登政府官员近年来对中国的最高级别访问。美中关系的观察人士认为，伯恩斯的秘密出访显示美中双方都有意缓和紧张关系。```0
   ## 6/2/2023 - [司法部：不会就在彭斯家中发现机密文件一事提起刑事指控](https://www.voachinese.com/a/justice-dept-won-t-charge-pence-over-handling-of-classified-documents-20230602/7120987.html)
  ```美国司法部已通知前副总统迈克·彭斯的法律团队，不会就在其印第安纳州的家中发现机密文件的事件提起刑事指控。```0
-  ## 6/2/2023 - [
-面对俄中挑战，美国对其现有核武库充满信心](https://www.voachinese.com/a/us-confident-in-its-nuclear-stockpile-seldin-20230602/7120863.html)
- ```美国表示，它不打算制造更多核武器来应对来自俄罗斯、中国以及越来越多的拥有或可能很快拥有核能力的对手的威胁。```0
