--- a/新闻/自由亚洲电台.md
+++ b/新闻/自由亚洲电台.md
@@ -1,4 +1,8 @@
 
+  ## 6/3/2023 - [六四34周年前夕 香港警方逮捕4人](https://www.rfa.org/mandarin/Xinwen/10-06032023162418.html)
+ ```在六四34周年前夕，香港警方在街头逮捕了至少两名艺术家和另外两名人士。据法新社目击，在繁华的香港铜锣湾区的一条街道上，香港艺术家三木（陈式森）在唱"不要忘记六四！不要忘记六四！香港人，不要怕他们"。一名警察对他喊道："不要说煽动性的话"。法新社记者观察到，这名男子随后被一辆警车带走。另一位知名行为艺术家陈美彤也被带走。警察还逮捕了一对年轻夫妇，他们手持象征哀悼的白菊花。当法新社询问他们是否被逮捕时，男子回答说："我不知道"，然后他就被带走。法新社的报道说，30多年来，香港每年都有数万人聚集在维多利亚公园举行烛光晚会，纪念1989年6月4日在北京天安门广场被枪杀的1000多名和平示威者。但自从北京在2020年对香港实施国家安全法以来，香港当局已经终止了这些集会，并推动参与这些纪念活动的艺术家在香港以外的地方进行纪念表演。在今年的六四纪念日之前，香港当局一再拒绝确认公众纪念活动是否违法，只说"每个人都应该依法行事"。（责编：梒青）```0
+  ## 6/3/2023 - [荷兰防长反驳崔天凯有关乌战是欧洲安全架构失败的结论](https://www.rfa.org/mandarin/Xinwen/9-06032023161552.html)
+ ```中国前驻美大使崔天凯在新加坡香格里拉对话会议上，将俄罗斯对乌克兰的侵略战争归因于欧洲安全架构的失败。荷兰国防部长奥隆格伦KajsaOllongren对中国的这种解释提出质疑。因崔天凯是退休外交官，荷兰防长称等候听中国防长的正式官方立场表述。据法国媒体3日报道，荷兰国防部长称，“听到这个说法我其实有点惊讶。”奥隆格伦在新加坡香格里拉对话的一个小组中对前中国大使崔天凯进行了即兴反驳后，她在接受POLITICO采访时说，“这是非常非常错误的。”崔天凯是这个亚洲顶级安全论坛上中国代表团的非正式顾问，他在周六的活动中表示，欧洲在确保大陆安全方面收效甚微，崔天凯并建议论坛上的其他国家应该取而代之，并向中国和亚洲学习。POLITICO引述崔天凯称，“我们过去常常向欧洲寻求他们在区域一体化方面的经验。但如今，也许欧洲人可以转而关注我们。”崔天凯对与会者说，“我们不会将我们的方式强加给你们，但也许你们可以从我们的经验和成功中学到一些有用的东西。”在小组中坐在乌克兰国防部长列兹尼科夫OleksiyReznikov旁边的崔天凯还说，“我们将继续以亚洲方式管理我们的安全局势和处理所有问题。”“我们不需要亚洲北约。我们不希望看到北约在我们地区的作用扩大。”POLITICO称，虽然乌克兰部长没有批评北京，他只说乌克兰需要赢得战争，而不是谈判，但荷兰防长奥隆格伦对崔天凯的说法进行了反击。据荷兰防长说，“大使表示，由于乌克兰的战争，欧洲未能很好地管理其安全。当然，我知道乌克兰有一场战争，但我认为这不是我们对欧洲安全局势管理不善的结果。这是有人不尊重我们想要管理欧洲安全的方式的结果。”荷兰部长说，“我也认为，欧洲并不缺乏对中国的尊重，也不缺乏对中国文化的尊重；我们对这些非常尊重。”她说。奥隆格伦在与俄罗斯的关系和军事领域的技术进步等问题上对中国采取了越来越严厉的立场，她在小组讨论后接受采访说，崔天凯提出的是“对形势的错误看法”。荷兰防长称，“你不能将俄罗斯非法入侵乌克兰归咎于欧洲或欧洲国家。”她还说，由于崔天凯不再是大使，她将等待中国国防部长李尚福在周日的主旨演讲中阐明中国的官方立场。（责编：梒青）```0
   ## 6/3/2023 - [美助理国务卿和白宫国安会高官联袂访华](https://www.rfa.org/mandarin/Xinwen/8-06032023161208.html)
  ```美国国务院星期六宣布，主管东亚和太平洋事务的助理国务卿康达（DanielKritenbrink）将于6月4日至10日前往中国和新西兰访问。综合媒体3日报道，这是继美国中央情报局局长伯恩斯（WilliamBurns）上个月秘密访问北京之后，又一位主管中国事务的高层官员访华。美国国务院发表的一份声明说，白宫国安会主管中国与台湾事务的新任资深主任萨拉·贝兰（SarahBeran）也会与康达一起前往北京，与中方官员就双边关系举行会谈。美国助理国务卿康达与白宫国安会资深主任贝兰得以前往北京与中方官员举行会谈，表明北京虽然拒绝恢复两军高层交往，但是似乎并不反对两国外交和经贸官员之间的对话。据法新社的报道，康达今年二月也曾访华，为布林肯预定对北京的访问打前站，但是布林肯却因为美中气球事件而推迟或取消了访问。（责编：梒青）```0
   ## 6/3/2023 - [六四34周年前夕：CECC主席提名彭立发、张展、李康梦角逐诺贝尔和平奖](https://www.rfa.org/mandarin/Xinwen/7-06032023160525.html)
@@ -13,8 +17,8 @@
  ```综合外电3日报道，中国和俄罗斯周五无视美国呼吁联合国安理会团结起来，共同谴责朝鲜本周试图发射卫星，反而指责华盛顿加剧了朝鲜半岛的紧张局势。美国驻联合国使团的外交官罗伯特·伍德（RobertWood）在美国和盟国组织的联合国安理会会议上发出呼吁，讨论朝鲜周三的发射卫星失败。美国称朝鲜这次失败的发射违反了多项联合国决议，因为它使用了弹道导弹技术。伍德说：“我们呼吁所有安理会成员国维护安理会的信誉，与我们一起谴责这种非法行为，并敦促朝鲜不要继续其既定的计划，进行另一次进一步威胁国际和平与安全的发射。”发射后，朝鲜领导人金正恩的妹妹金与正表示，朝鲜将很快将一颗军事间谍卫星送入轨道，并誓言平壤将提高其军事监视能力。中国常驻联合国副代表耿爽在联合国会议上表示，朝鲜有“合理的安全关切”，并表示安理会应该促进减少升级，而不是指责一方。耿爽发言后，伍德再次发言指出，“中国代表团的代表在任何时候都没有谴责朝鲜的这次太空发射。”耿爽对此回应说，有必要进行真正的对话，并且考虑到朝鲜方面的关切。联合国秘书长安东尼奥·古特雷斯（AntonioGuterres）本周表示，平壤使用弹道导弹技术的任何发射都违反了安理会决议。金与正称对朝鲜发射卫星的批评是“自相矛盾的”，因为美国和其他国家已经发射了“数千颗卫星”。（责编：梒青）```0
   ## 6/3/2023 - [美中情局长秘密访问中国](https://www.rfa.org/mandarin/Xinwen/2-06032023111253.html)
  ```一位不愿透露姓名的美国官员2日对媒体表示，美国中央情报局（CIA）局长伯恩斯(WilliamBurns)于5月秘密访问了中国。“上个月，伯恩斯局长前往北京会见了中国同行，并强调了在情报沟通渠道中保持顺畅的重要性。”这位官员说。该官员没有提供有关会晤的更多细节。美国中央情报局并不定期公布其负责人的旅行记录。美联社援引第二位匿名消息人士的话说，伯恩斯只与情报官员会面，而没有与政治领导人会面。美国政府曾经派这位中央情报局局长进行过多次敏感的访问，包括在2021年底访问俄罗斯，讨论莫斯科准备入侵乌克兰的迹象。（责编：梒青）```0
-  ## Invalid Date - [美防长对中国不愿接触表示“深切关注” 北京指责美国破坏台海稳定沙利文：威慑中俄  美国无需更多核武香格里拉对话会：中方拒绝对话 奥斯汀称之“不幸”日本在冲绳部署爱国者导弹  日媒：考虑到中国与台海局势“疫苗宝宝之家” 发起人何方美遭超期羁押 女儿滞留精神病院美国跨党派议员提案：悼念六四  谴责中共打压人权六四事件34周年　人权组织敦促中国政府承认屠城责任《华尔街日报》：美国在亚洲建立前哨基地应对中国导弹威胁](https://www.rfa.org/mandarin/Xinwen/1-06032023094945.htmlhttps://www.rfa.org/mandarin/Xinwen/10-06022023165710.htmlhttps://www.rfa.org/mandarin/Xinwen/9-06022023165555.htmlhttps://www.rfa.org/mandarin/Xinwen/8-06022023165445.htmlhttps://www.rfa.org/mandarin/Xinwen/7-06022023165330.htmlhttps://www.rfa.org/mandarin/Xinwen/6-06022023165228.htmlhttps://www.rfa.org/mandarin/Xinwen/5-06022023115605.htmlhttps://www.rfa.org/mandarin/Xinwen/4-06022023114919.html)
- ```据本台英语组报道，美国国防部长劳埃德·奥斯汀在与中国国防部长会面的呼吁遭到拒绝后，敦促中国军方领导人进行接触，称开放的沟通渠道“至关重要”。奥斯汀周六在新加坡香格里拉对话安全论坛上发表重要讲话时说，他“深感关切的是，中国一直不愿更认真地参与我们两国军队之间更好的危机管理机制。”美国国防部长在提到中国时使用的正式名称是中华人民共和国。他说，“对于负责任的国防领导人来说，合适的谈话时间是任何时候，合适的谈话时间是每次，现在是合适的谈话时间，”他并补充说“对话不是奖励。 这是必须的。”“我们谈得越多，就越能避免可能导致危机或冲突的误解和误判。”美国国防部长奥斯汀和自 2018 年以来一直受到美国制裁的中国国防部长李尚福，在周五的正式晚宴前进行了简短的握手，但没有交谈，也没有预计他们之间会举行双边会谈。“晚餐时亲切的握手不能替代实质性的参与，”奥斯汀说。美国国防部长抨击了中国，他说中国“继续对在国际领空合法飞行的美国和盟国飞机进行数量惊人的危险拦截。”就在上周，美国军方指责中国的J-16战斗机在拦截美国空军RC-135侦察机时进行了“不必要的攻击性”机动。“我们不寻求冲突或对抗，但面对欺凌或胁迫，我们不会退缩，”奥斯汀说。美国战略与国际研究中心 (CSIS) 非常驻研究员 HuongLeThu 说，两个大国之间明显的裂痕已经“成为新的现实”。HuongLeThu 告诉自由亚洲电台，无论“他们喜欢与否”，地区国家都必须接受它。“但他们可以通过促进和鼓励美中之间的对话来降低热度，从而有助于控制紧张局势，”这位研究员补充说。共同愿景菲律宾国防部高级副部长兼主管官员小卡利托·加尔维斯 (CarlitoGalvezJr.) 表示，马尼拉认为“国际法是各国之间最大的平衡器”。菲律宾于 2016 年在联合国法庭赢得了针对中国在南中国海的主张的法律诉讼，但北京迄今拒绝接受该裁决。两国最近因在南沙群岛的一些岛屿的主权问题卷入了新的争端。“俗话说，好篱笆造就好邻居，”加尔维斯说，“只有当邻国有明确的界限并尊重既定界限时，关系才会真正友好。”印度尼西亚国防部长普拉博沃·苏比安托表示，“我们必须通过对话、谈判和双赢解决方案，来克服我们的地缘政治竞争和领土争端。”“妥协是社区和社会繁荣的唯一途径，”他说，并警告说超级大国之间的竞争“已经变成了冷战”，在任何战争中，“灾难的危险总是近在咫尺。”不过，美国国防部长奥斯汀坚称，美国“不寻求新冷战”。“竞争绝不能演变成冲突。 该地区永远不应分裂为敌对集团，”他说。奥斯汀表示，华盛顿并未像中国一再声称的那样在印太地区创建、并且也不愿意创建一个新的北约。然而，奥斯汀说，美国希望建立“灵活的联盟来推进我们的共同愿景”，以使印太地区“更加稳定和更有弹性”。华盛顿将澳大利亚、日本、韩国、菲律宾和泰国列为其在该地区的“坚定盟友”，并将印度、印度尼西亚、越南和新加坡视为“重要伙伴”。在谈到自治的台湾时，奥斯汀说，美国“仍然坚定地致力于维持那里的现状，这与我们长期以来的一个中国政策一致，并履行我们在《台湾关系法》下的既定义务。”“冲突既不是迫在眉睫也不是不可避免的。 今天的威慑力很强，我们的工作就是保持这种威慑力，” 奥斯汀说。北京将台湾视为中国的一个省，并坚决抗议“外部势力”参与台湾政治。中国的中央军委联合参谋部副部长景建峰中将对美国防长奥斯汀的涉台言论进行了回击，称其“完全错误”。“世界上只有一个中国，台湾是中国领土神圣不可分割的一部分，”完成祖国统一是包括台湾同胞在内的全体中国人民的共同愿望和神圣责任。 祖国的。”中国的反击中国人民解放军军事科学院研究员赵小卓大校表示，一直试图改变台海现状的是美国。赵在香格里拉对话会上对记者说：“台湾海峡在过去十年左右的时间里非常稳定，但美国想要破坏这种稳定。”“这样他们就可以向台湾出售武器并赚很多钱，”他说。新加坡安全论坛的中国与会者反击了美国及其盟友的批评。赵大校表示，华盛顿需要改变其与他人互动方式中他所说的“错误行为”。“在对话方面，你必须照顾对方的利益，”他说，并指责美方不理解这一基本原则。另一位中国代表、来自中国国防大学国家安全学院的张驰大校质疑华盛顿在建立多边机构的同时促进东南亚集团东盟的中心地位是否自相矛盾。与此同时，该学院前副校长唐永胜少将回击加拿大国防部长安妮塔·阿南德称中国是该地区的破坏性力量。他说“中国为维护该地区的和平与稳定做出了巨大努力”。中国共产党喉舌《环球时报》周六在一篇报道中援引中国军方一名官员的话说，“中国有信心走上舞台发声。”“尽管明知香格里拉对话会是西方国家主导的攻击中国的平台，但中国还是来了，”该报称。中国国防部长李尚福将于周日，也就是论坛的最后一天，就北京的新安全举措发表重要讲话。（责编：梒青）Sat,03Jun202309:51:00-0400沙利文：威慑中俄美国无需更多核武据路透社6月2日报道，美国国家安全顾问杰克·沙利文（JakeSullivan）当天向军备控制协会倡导组织发表讲话时表示，美国无需更多核武器来威慑俄罗斯与中国加在一起的武装力量，因为美国具有先进的军事能力。https://www.rfa.org/mandarin/Xinwen/10-06022023165710.htmlhttps://www.rfa.org/mandarin/Xinwen/10-06022023165710.html图为美国空军的義勇兵III型洲际弹道导弹，可用于投射核弹头。路透社资料图片据路透社6月2日报道，美国国家安全顾问杰克·沙利文（JakeSullivan）当天向军备控制协会倡导组织发表讲话时表示，美国无需更多核武器来威慑俄罗斯与中国加在一起的武装力量，因为美国具有先进的军事能力。沙利文还表示，只要莫斯科能保持一致，华盛顿将遵守2010年有关战略核武器限制条约的规定，直到该条约2026年到期，并且美国希望与中俄两国举行军备控制谈判。报道说，中国在扩大其核武库的同时，与美国在台湾问题上也处于紧张对峙状态。中方拒绝与华盛顿进行减少冲突风险的对话，本周更拒绝了两国防长在新加坡香格里拉对话会期间的会谈。根据五角大楼估算，到2035年，中国的核武库可能会增加两倍以上，达到1500枚核弹头。而威胁要在对乌克兰战争中使用核武器的俄罗斯，今年2月已宣布暂停参与上述战略核武器限制条约。沙利文表示，美国不需要将核力量增加到超过竞争对手的总和才能成功威慑他们，也不需要部署更加危险的核武器来维持威慑，威慑意味着有“更好”的方法，而不是“更多”的方法。但他强调，上述战略核武器限制条约必须考虑到中国不断增长的核武库问题。责编：何平Fri,02Jun202316:57:00-0400香格里拉对话会：中方拒绝对话奥斯汀称之“不幸”据本台英语部发自新加坡的报道，在南海和东亚紧张局势升级之际，新加坡举办的重要地区安全论坛“香格里拉对话会”格外引人注目。但会议期间，美中两国防长面对面交流的大门却依然关闭。https://www.rfa.org/mandarin/Xinwen/9-06022023165555.htmlhttps://www.rfa.org/mandarin/Xinwen/9-06022023165555.html美国防长奥斯汀与中国防长李尚福等人在周五新加坡晚宴上同坐主桌。路透社图片据本台英语部发自新加坡的报道，在南海和东亚紧张局势升级之际，新加坡举办的重要地区安全论坛“香格里拉对话会”格外引人注目。但会议期间，美中两国防长面对面交流的大门却依然关闭。美国国防部长奥斯汀此前邀请中国国防部长李尚福在新加坡香格里拉对话期间举行双边会谈，但被中国防长拒绝。奥斯汀在抵达新加坡前，以“不幸”形容中方的决定。他表示，拥有强大能力的国家相互对话很重要，以此可管理危机并防止事态失控。据悉，本届为期三天的“香格里拉对话”有来自49个国家的约600位代表与会，美中防长将分别发表演说。另据台湾中央社报道，美国防长奥斯汀与中国防长李尚福等人在周五新加坡晚宴上同坐主桌。先抵达会场的奥斯汀在李尚福到场后主动向前握手致意，但未有太多互动。责编：何平Fri,02Jun202316:56:00-0400日本在冲绳部署爱国者导弹日媒：考虑到中国与台海局势https://www.rfa.org/mandarin/Xinwen/8-06022023165445.htmlhttps://www.rfa.org/mandarin/Xinwen/8-06022023165445.html日本自卫队士兵走过一具“爱国者”-3导弹发射单位路透社资料图片为应对朝鲜发射“军事侦察卫星”以及可能的飞行物散落物体等，日本军方早在数周前即已在冲绳县多个岛屿部署爱国者地对空拦截导弹。但有日本媒体认为，此举是考虑到与台湾突发事态有关的中国大陆，而进行的部队活动“预演”。据共同社6月2日报道，日本防卫相滨田靖一当天回答有关朝鲜发射“卫星”后，原计划在石垣岛展开活动的填埋地“南NU滨”，为何没有“爱国者3”导弹的踪影等问题。滨田靖一仅表示，“对于运用的详情不予回答”。据报道，日本防卫省在4月下旬已经向冲绳县的宫古、石垣、与那国三岛的自卫队设施运进“爱国者3”导弹。但因气候原因，石垣岛没有把导弹系统部署在设施外部，而在宫古岛和与那国岛上的拦截导弹发射器则呈收起状态。共同社指出，日本政府出于对中国军力增强及台湾发生突发事态的担忧，正在加强西南诸岛的防卫能力。有自卫队干部披露，此举是“把朝鲜发射作为借口，实际上是设想台湾突发事态而移动了部队。”责编：何平Fri,02Jun202316:54:00-0400“疫苗宝宝之家”发起人何方美遭超期羁押女儿滞留精神病院https://www.rfa.org/mandarin/Xinwen/7-06022023165330.htmlhttps://www.rfa.org/mandarin/Xinwen/7-06022023165330.html“疫苗宝宝之家”发起人何方美何方美推特截图据中国民间权益组织民生观察6月2日引述知情人士披露，维权团体“疫苗宝宝之家”发起人何方美因在2020年10月9日，带着疫苗致残的女儿前往河南辉县政府门前泼油漆抗议，被警察当场带走并刑拘后，目前该案仍未宣判，何方美本人则处在被超期羁押中，而她的两个女儿仍滞留在精神病院。据介绍，何方美因1岁10月大的女儿于2018年3月，在河南辉县接种甲肝、麻腮风、百白破疫苗后,导致病毒性脊髓炎而瘫痪。多方求助投诉均被拒后，夫妇俩人在北京一边为女儿治病，一边上访维权，并因此屡遭当局打压。民生观察披露，近日何方美写信请姐姐照顾孩子，可医院和警察都不让姐姐探望。家属就此呼吁当局，孩子们是无辜的，他们应该和家人一起生活。此外，有网友发起“六一明信片行动，接孩子回家”，通过网络声援人权捍卫者何方美。责编：何平Fri,02Jun202316:53:00-0400美国跨党派议员提案：悼念六四谴责中共打压人权https://www.rfa.org/mandarin/Xinwen/6-06022023165228.htmlhttps://www.rfa.org/mandarin/Xinwen/6-06022023165228.html美国众议院外交事务委员会印太小组主席金映玉（YoungKim）(图左)，和该小组首席议员阿米·贝拉（AmiBera）。维基百科/RFA组图中国六四事件34周年之际，美国众议院外交事务委员会印太小组主席金映玉（YoungKim）和该小组首席议员阿米·贝拉（AmiBera）提出一项跨党派决议，以纪念1989年天安门广场大屠杀的受害者，并谴责中国共产党继续在大陆及香港打压人权和基本自由。金映玉众议员表示，“我们永远不会忘记那些，面对压迫政权而在天安门广场与人民解放军面对面的勇敢的学生们。三十多年后，我们通过支持那些仍然被困在中国共产党威权主义下、但却热爱自由的人们，来缅怀受害者并纪念他们的遗产。”她强调，该决议向外界发出一致信息，即美国将继续成为世界舞台上自由、希望和机会的灯塔。据悉，上述决议案敦促中共当局停止对六四事件进行言论审查，接受联合国人权高专进行的独立调查，并允许流亡海外的六四参与者能在不面临报复风险的情况下返回中国。该决议同时呼吁香港政府及北京当局，尊重港人权利、自由以及香港法治体系的独立性，并依据《中英联合声明》与《基本法》有关“一国两制”的承诺，恢复香港独立的民选代表。上述议案还同时获得其他11位美国两党众议员的联署支持。责编：何平Fri,02Jun202316:52:00-0400六四事件34周年　人权组织敦促中国政府承认屠城责任总部位于美国纽约的国际人权组织人权观察在六四事件34周年前夕发表声明，敦促中国政府承认大规模杀害民主运动示威者的责任，并为死难者及其家属提供赔偿。https://www.rfa.org/mandarin/Xinwen/5-06022023115605.htmlhttps://www.rfa.org/mandarin/Xinwen/5-06022023115605.html国际人权组织人权观察在六四事件34周年前夕发表声明，敦促中国政府承认大规模杀害民主运动示威者的责任。HumanRightsWatch官网截图总部位于美国纽约的国际人权组织人权观察在六四事件34周年前夕发表声明，敦促中国政府承认大规模杀害民主运动示威者的责任，并为死难者及其家属提供赔偿。声明指出，当全球民众悼念1989年北京六四屠杀之际，中国当局正日益积极抹消相关记忆，并从六四周年的几星期前就开始防堵民间悼念。各地维权人士和六四死难者亲属团体“天安门母亲”的成员，均遭限制行动与对外联系。而中国政府从未承认对屠杀负责，也从未追究任何官员的法律责任，既无意调查相关事件，也不愿公布被杀死、杀伤、强迫失踪或入狱者的资料。人权观察表示，对六四屠杀及其后续镇压缺乏长期一致的国际应对，是导致北京当局日益明目张胆侵犯人权的因素之一。作为多部国际人权条约缔约国以及联合国人权理事会现任成员，中国有义务“维护人权的最高标准”。人权观察敦促中国政府尊重言论、结社自由与和平集会的权利，停止对质疑六四屠杀官方说法的人士加以骚扰和任意拘留；向“天安门母亲”成员道歉，公布所有死难者名单，并向死难者家属提供赔偿；批准对六四及后续事件进行公开独立调查，并迅速公布调查结果与结论；允许涉及八九民运而流亡海外的中国公民不受阻碍返国；以及调查所有参与策划或下令对示威群众非法使用致命武力的政府与军方官员，并予以起诉。责编：何平Fri,02Jun202311:59:00-0400《华尔街日报》：美国在亚洲建立前哨基地应对中国导弹威胁据美国《华尔街日报》6月2日报道，为应对来自中国不断增大的军事挑战，美国已在亚洲采取新的军事策略，包括增多前哨基地，以摆脱对大型军事基地的严重依赖。https://www.rfa.org/mandarin/Xinwen/4-06022023114919.htmlhttps://www.rfa.org/mandarin/Xinwen/4-06022023114919.html图为美国军所属的P-3“獵戶座”海上巡邏機部署在菲律宾西部公主港的基地路透社资料图片据美国《华尔街日报》6月2日报道，为应对来自中国不断增大的军事挑战，美国已在亚洲采取新的军事策略，包括增多前哨基地，以摆脱对大型军事基地的严重依赖。这个周末，由多国国防部长出席的香格里拉对话会将拉开帷幕，中国日益增强的军力和美国在亚洲的军事存在预计将成为会议的主题之一。而中国日前拒绝了美国提出的有关两国防长在会议期间举行会晤的要求。报道说，随着中国导弹库日渐扩大，技术越发先进，美军在亚洲的大型基地日益面临危险。而通过将武器装备、部队和指挥所分散到较小的前哨基地，美国希望使中国更难通过削弱任何单一军事设施来发动打击。根据五角大楼估算，中国现有超过1300枚弹道导弹可用于打击亚太地区目标，其中超过250枚可打到美国在关岛的主要军事基地。责编：何平Fri,02Jun202311:55:00-0400据路透社6月2日报道，美国国家安全顾问杰克·沙利文（JakeSullivan）当天向军备控制协会倡导组织发表讲话时表示，美国无需更多核武器来威慑俄罗斯与中国加在一起的武装力量，因为美国具有先进的军事能力。沙利文还表示，只要莫斯科能保持一致，华盛顿将遵守2010年有关战略核武器限制条约的规定，直到该条约2026年到期，并且美国希望与中俄两国举行军备控制谈判。报道说，中国在扩大其核武库的同时，与美国在台湾问题上也处于紧张对峙状态。中方拒绝与华盛顿进行减少冲突风险的对话，本周更拒绝了两国防长在新加坡香格里拉对话会期间的会谈。根据五角大楼估算，到2035年，中国的核武库可能会增加两倍以上，达到1500枚核弹头。而威胁要在对乌克兰战争中使用核武器的俄罗斯，今年2月已宣布暂停参与上述战略核武器限制条约。沙利文表示，美国不需要将核力量增加到超过竞争对手的总和才能成功威慑他们，也不需要部署更加危险的核武器来维持威慑，威慑意味着有“更好”的方法，而不是“更多”的方法。但他强调，上述战略核武器限制条约必须考虑到中国不断增长的核武库问题。责编：何平据本台英语部发自新加坡的报道，在南海和东亚紧张局势升级之际，新加坡举办的重要地区安全论坛“香格里拉对话会”格外引人注目。但会议期间，美中两国防长面对面交流的大门却依然关闭。美国国防部长奥斯汀此前邀请中国国防部长李尚福在新加坡香格里拉对话期间举行双边会谈，但被中国防长拒绝。奥斯汀在抵达新加坡前，以“不幸”形容中方的决定。他表示，拥有强大能力的国家相互对话很重要，以此可管理危机并防止事态失控。据悉，本届为期三天的“香格里拉对话”有来自49个国家的约600位代表与会，美中防长将分别发表演说。另据台湾中央社报道，美国防长奥斯汀与中国防长李尚福等人在周五新加坡晚宴上同坐主桌。先抵达会场的奥斯汀在李尚福到场后主动向前握手致意，但未有太多互动。责编：何平为应对朝鲜发射“军事侦察卫星”以及可能的飞行物散落物体等，日本军方早在数周前即已在冲绳县多个岛屿部署爱国者地对空拦截导弹。但有日本媒体认为，此举是考虑到与台湾突发事态有关的中国大陆，而进行的部队活动“预演”。据共同社6月2日报道，日本防卫相滨田靖一当天回答有关朝鲜发射“卫星”后，原计划在石垣岛展开活动的填埋地“南NU滨”，为何没有“爱国者3”导弹的踪影等问题。滨田靖一仅表示，“对于运用的详情不予回答”。据报道，日本防卫省在4月下旬已经向冲绳县的宫古、石垣、与那国三岛的自卫队设施运进“爱国者3”导弹。但因气候原因，石垣岛没有把导弹系统部署在设施外部，而在宫古岛和与那国岛上的拦截导弹发射器则呈收起状态。共同社指出，日本政府出于对中国军力增强及台湾发生突发事态的担忧，正在加强西南诸岛的防卫能力。有自卫队干部披露，此举是“把朝鲜发射作为借口，实际上是设想台湾突发事态而移动了部队。”责编：何平据中国民间权益组织民生观察6月2日引述知情人士披露，维权团体“疫苗宝宝之家”发起人何方美因在2020年10月9日，带着疫苗致残的女儿前往河南辉县政府门前泼油漆抗议，被警察当场带走并刑拘后，目前该案仍未宣判，何方美本人则处在被超期羁押中，而她的两个女儿仍滞留在精神病院。据介绍，何方美因1岁10月大的女儿于2018年3月，在河南辉县接种甲肝、麻腮风、百白破疫苗后,导致病毒性脊髓炎而瘫痪。多方求助投诉均被拒后，夫妇俩人在北京一边为女儿治病，一边上访维权，并因此屡遭当局打压。民生观察披露，近日何方美写信请姐姐照顾孩子，可医院和警察都不让姐姐探望。家属就此呼吁当局，孩子们是无辜的，他们应该和家人一起生活。此外，有网友发起“六一明信片行动，接孩子回家”，通过网络声援人权捍卫者何方美。责编：何平中国六四事件34周年之际，美国众议院外交事务委员会印太小组主席金映玉（YoungKim）和该小组首席议员阿米·贝拉（AmiBera）提出一项跨党派决议，以纪念1989年天安门广场大屠杀的受害者，并谴责中国共产党继续在大陆及香港打压人权和基本自由。金映玉众议员表示，“我们永远不会忘记那些，面对压迫政权而在天安门广场与人民解放军面对面的勇敢的学生们。三十多年后，我们通过支持那些仍然被困在中国共产党威权主义下、但却热爱自由的人们，来缅怀受害者并纪念他们的遗产。”她强调，该决议向外界发出一致信息，即美国将继续成为世界舞台上自由、希望和机会的灯塔。据悉，上述决议案敦促中共当局停止对六四事件进行言论审查，接受联合国人权高专进行的独立调查，并允许流亡海外的六四参与者能在不面临报复风险的情况下返回中国。该决议同时呼吁香港政府及北京当局，尊重港人权利、自由以及香港法治体系的独立性，并依据《中英联合声明》与《基本法》有关“一国两制”的承诺，恢复香港独立的民选代表。上述议案还同时获得其他11位美国两党众议员的联署支持。责编：何平总部位于美国纽约的国际人权组织人权观察在六四事件34周年前夕发表声明，敦促中国政府承认大规模杀害民主运动示威者的责任，并为死难者及其家属提供赔偿。声明指出，当全球民众悼念1989年北京六四屠杀之际，中国当局正日益积极抹消相关记忆，并从六四周年的几星期前就开始防堵民间悼念。各地维权人士和六四死难者亲属团体“天安门母亲”的成员，均遭限制行动与对外联系。而中国政府从未承认对屠杀负责，也从未追究任何官员的法律责任，既无意调查相关事件，也不愿公布被杀死、杀伤、强迫失踪或入狱者的资料。人权观察表示，对六四屠杀及其后续镇压缺乏长期一致的国际应对，是导致北京当局日益明目张胆侵犯人权的因素之一。作为多部国际人权条约缔约国以及联合国人权理事会现任成员，中国有义务“维护人权的最高标准”。人权观察敦促中国政府尊重言论、结社自由与和平集会的权利，停止对质疑六四屠杀官方说法的人士加以骚扰和任意拘留；向“天安门母亲”成员道歉，公布所有死难者名单，并向死难者家属提供赔偿；批准对六四及后续事件进行公开独立调查，并迅速公布调查结果与结论；允许涉及八九民运而流亡海外的中国公民不受阻碍返国；以及调查所有参与策划或下令对示威群众非法使用致命武力的政府与军方官员，并予以起诉。责编：何平据美国《华尔街日报》6月2日报道，为应对来自中国不断增大的军事挑战，美国已在亚洲采取新的军事策略，包括增多前哨基地，以摆脱对大型军事基地的严重依赖。这个周末，由多国国防部长出席的香格里拉对话会将拉开帷幕，中国日益增强的军力和美国在亚洲的军事存在预计将成为会议的主题之一。而中国日前拒绝了美国提出的有关两国防长在会议期间举行会晤的要求。报道说，随着中国导弹库日渐扩大，技术越发先进，美军在亚洲的大型基地日益面临危险。而通过将武器装备、部队和指挥所分散到较小的前哨基地，美国希望使中国更难通过削弱任何单一军事设施来发动打击。根据五角大楼估算，中国现有超过1300枚弹道导弹可用于打击亚太地区目标，其中超过250枚可打到美国在关岛的主要军事基地。责编：何平```0
+  ## Invalid Date - [美防长对中国不愿接触表示“深切关注” 北京指责美国破坏台海稳定沙利文：威慑中俄  美国无需更多核武香格里拉对话会：中方拒绝对话 奥斯汀称之“不幸”日本在冲绳部署爱国者导弹  日媒：考虑到中国与台海局势“疫苗宝宝之家” 发起人何方美遭超期羁押 女儿滞留精神病院美国跨党派议员提案：悼念六四  谴责中共打压人权](https://www.rfa.org/mandarin/Xinwen/1-06032023094945.htmlhttps://www.rfa.org/mandarin/Xinwen/10-06022023165710.htmlhttps://www.rfa.org/mandarin/Xinwen/9-06022023165555.htmlhttps://www.rfa.org/mandarin/Xinwen/8-06022023165445.htmlhttps://www.rfa.org/mandarin/Xinwen/7-06022023165330.htmlhttps://www.rfa.org/mandarin/Xinwen/6-06022023165228.html)
+ ```据本台英语组报道，美国国防部长劳埃德·奥斯汀在与中国国防部长会面的呼吁遭到拒绝后，敦促中国军方领导人进行接触，称开放的沟通渠道“至关重要”。奥斯汀周六在新加坡香格里拉对话安全论坛上发表重要讲话时说，他“深感关切的是，中国一直不愿更认真地参与我们两国军队之间更好的危机管理机制。”美国国防部长在提到中国时使用的正式名称是中华人民共和国。他说，“对于负责任的国防领导人来说，合适的谈话时间是任何时候，合适的谈话时间是每次，现在是合适的谈话时间，”他并补充说“对话不是奖励。 这是必须的。”“我们谈得越多，就越能避免可能导致危机或冲突的误解和误判。”美国国防部长奥斯汀和自 2018 年以来一直受到美国制裁的中国国防部长李尚福，在周五的正式晚宴前进行了简短的握手，但没有交谈，也没有预计他们之间会举行双边会谈。“晚餐时亲切的握手不能替代实质性的参与，”奥斯汀说。美国国防部长抨击了中国，他说中国“继续对在国际领空合法飞行的美国和盟国飞机进行数量惊人的危险拦截。”就在上周，美国军方指责中国的J-16战斗机在拦截美国空军RC-135侦察机时进行了“不必要的攻击性”机动。“我们不寻求冲突或对抗，但面对欺凌或胁迫，我们不会退缩，”奥斯汀说。美国战略与国际研究中心 (CSIS) 非常驻研究员 HuongLeThu 说，两个大国之间明显的裂痕已经“成为新的现实”。HuongLeThu 告诉自由亚洲电台，无论“他们喜欢与否”，地区国家都必须接受它。“但他们可以通过促进和鼓励美中之间的对话来降低热度，从而有助于控制紧张局势，”这位研究员补充说。共同愿景菲律宾国防部高级副部长兼主管官员小卡利托·加尔维斯 (CarlitoGalvezJr.) 表示，马尼拉认为“国际法是各国之间最大的平衡器”。菲律宾于 2016 年在联合国法庭赢得了针对中国在南中国海的主张的法律诉讼，但北京迄今拒绝接受该裁决。两国最近因在南沙群岛的一些岛屿的主权问题卷入了新的争端。“俗话说，好篱笆造就好邻居，”加尔维斯说，“只有当邻国有明确的界限并尊重既定界限时，关系才会真正友好。”印度尼西亚国防部长普拉博沃·苏比安托表示，“我们必须通过对话、谈判和双赢解决方案，来克服我们的地缘政治竞争和领土争端。”“妥协是社区和社会繁荣的唯一途径，”他说，并警告说超级大国之间的竞争“已经变成了冷战”，在任何战争中，“灾难的危险总是近在咫尺。”不过，美国国防部长奥斯汀坚称，美国“不寻求新冷战”。“竞争绝不能演变成冲突。 该地区永远不应分裂为敌对集团，”他说。奥斯汀表示，华盛顿并未像中国一再声称的那样在印太地区创建、并且也不愿意创建一个新的北约。然而，奥斯汀说，美国希望建立“灵活的联盟来推进我们的共同愿景”，以使印太地区“更加稳定和更有弹性”。华盛顿将澳大利亚、日本、韩国、菲律宾和泰国列为其在该地区的“坚定盟友”，并将印度、印度尼西亚、越南和新加坡视为“重要伙伴”。在谈到自治的台湾时，奥斯汀说，美国“仍然坚定地致力于维持那里的现状，这与我们长期以来的一个中国政策一致，并履行我们在《台湾关系法》下的既定义务。”“冲突既不是迫在眉睫也不是不可避免的。 今天的威慑力很强，我们的工作就是保持这种威慑力，” 奥斯汀说。北京将台湾视为中国的一个省，并坚决抗议“外部势力”参与台湾政治。中国的中央军委联合参谋部副部长景建峰中将对美国防长奥斯汀的涉台言论进行了回击，称其“完全错误”。“世界上只有一个中国，台湾是中国领土神圣不可分割的一部分，”完成祖国统一是包括台湾同胞在内的全体中国人民的共同愿望和神圣责任。 祖国的。”中国的反击中国人民解放军军事科学院研究员赵小卓大校表示，一直试图改变台海现状的是美国。赵在香格里拉对话会上对记者说：“台湾海峡在过去十年左右的时间里非常稳定，但美国想要破坏这种稳定。”“这样他们就可以向台湾出售武器并赚很多钱，”他说。新加坡安全论坛的中国与会者反击了美国及其盟友的批评。赵大校表示，华盛顿需要改变其与他人互动方式中他所说的“错误行为”。“在对话方面，你必须照顾对方的利益，”他说，并指责美方不理解这一基本原则。另一位中国代表、来自中国国防大学国家安全学院的张驰大校质疑华盛顿在建立多边机构的同时促进东南亚集团东盟的中心地位是否自相矛盾。与此同时，该学院前副校长唐永胜少将回击加拿大国防部长安妮塔·阿南德称中国是该地区的破坏性力量。他说“中国为维护该地区的和平与稳定做出了巨大努力”。中国共产党喉舌《环球时报》周六在一篇报道中援引中国军方一名官员的话说，“中国有信心走上舞台发声。”“尽管明知香格里拉对话会是西方国家主导的攻击中国的平台，但中国还是来了，”该报称。中国国防部长李尚福将于周日，也就是论坛的最后一天，就北京的新安全举措发表重要讲话。（责编：梒青）Sat,03Jun202309:51:00-0400沙利文：威慑中俄美国无需更多核武据路透社6月2日报道，美国国家安全顾问杰克·沙利文（JakeSullivan）当天向军备控制协会倡导组织发表讲话时表示，美国无需更多核武器来威慑俄罗斯与中国加在一起的武装力量，因为美国具有先进的军事能力。https://www.rfa.org/mandarin/Xinwen/10-06022023165710.htmlhttps://www.rfa.org/mandarin/Xinwen/10-06022023165710.html图为美国空军的義勇兵III型洲际弹道导弹，可用于投射核弹头。路透社资料图片据路透社6月2日报道，美国国家安全顾问杰克·沙利文（JakeSullivan）当天向军备控制协会倡导组织发表讲话时表示，美国无需更多核武器来威慑俄罗斯与中国加在一起的武装力量，因为美国具有先进的军事能力。沙利文还表示，只要莫斯科能保持一致，华盛顿将遵守2010年有关战略核武器限制条约的规定，直到该条约2026年到期，并且美国希望与中俄两国举行军备控制谈判。报道说，中国在扩大其核武库的同时，与美国在台湾问题上也处于紧张对峙状态。中方拒绝与华盛顿进行减少冲突风险的对话，本周更拒绝了两国防长在新加坡香格里拉对话会期间的会谈。根据五角大楼估算，到2035年，中国的核武库可能会增加两倍以上，达到1500枚核弹头。而威胁要在对乌克兰战争中使用核武器的俄罗斯，今年2月已宣布暂停参与上述战略核武器限制条约。沙利文表示，美国不需要将核力量增加到超过竞争对手的总和才能成功威慑他们，也不需要部署更加危险的核武器来维持威慑，威慑意味着有“更好”的方法，而不是“更多”的方法。但他强调，上述战略核武器限制条约必须考虑到中国不断增长的核武库问题。责编：何平Fri,02Jun202316:57:00-0400香格里拉对话会：中方拒绝对话奥斯汀称之“不幸”据本台英语部发自新加坡的报道，在南海和东亚紧张局势升级之际，新加坡举办的重要地区安全论坛“香格里拉对话会”格外引人注目。但会议期间，美中两国防长面对面交流的大门却依然关闭。https://www.rfa.org/mandarin/Xinwen/9-06022023165555.htmlhttps://www.rfa.org/mandarin/Xinwen/9-06022023165555.html美国防长奥斯汀与中国防长李尚福等人在周五新加坡晚宴上同坐主桌。路透社图片据本台英语部发自新加坡的报道，在南海和东亚紧张局势升级之际，新加坡举办的重要地区安全论坛“香格里拉对话会”格外引人注目。但会议期间，美中两国防长面对面交流的大门却依然关闭。美国国防部长奥斯汀此前邀请中国国防部长李尚福在新加坡香格里拉对话期间举行双边会谈，但被中国防长拒绝。奥斯汀在抵达新加坡前，以“不幸”形容中方的决定。他表示，拥有强大能力的国家相互对话很重要，以此可管理危机并防止事态失控。据悉，本届为期三天的“香格里拉对话”有来自49个国家的约600位代表与会，美中防长将分别发表演说。另据台湾中央社报道，美国防长奥斯汀与中国防长李尚福等人在周五新加坡晚宴上同坐主桌。先抵达会场的奥斯汀在李尚福到场后主动向前握手致意，但未有太多互动。责编：何平Fri,02Jun202316:56:00-0400日本在冲绳部署爱国者导弹日媒：考虑到中国与台海局势https://www.rfa.org/mandarin/Xinwen/8-06022023165445.htmlhttps://www.rfa.org/mandarin/Xinwen/8-06022023165445.html日本自卫队士兵走过一具“爱国者”-3导弹发射单位路透社资料图片为应对朝鲜发射“军事侦察卫星”以及可能的飞行物散落物体等，日本军方早在数周前即已在冲绳县多个岛屿部署爱国者地对空拦截导弹。但有日本媒体认为，此举是考虑到与台湾突发事态有关的中国大陆，而进行的部队活动“预演”。据共同社6月2日报道，日本防卫相滨田靖一当天回答有关朝鲜发射“卫星”后，原计划在石垣岛展开活动的填埋地“南NU滨”，为何没有“爱国者3”导弹的踪影等问题。滨田靖一仅表示，“对于运用的详情不予回答”。据报道，日本防卫省在4月下旬已经向冲绳县的宫古、石垣、与那国三岛的自卫队设施运进“爱国者3”导弹。但因气候原因，石垣岛没有把导弹系统部署在设施外部，而在宫古岛和与那国岛上的拦截导弹发射器则呈收起状态。共同社指出，日本政府出于对中国军力增强及台湾发生突发事态的担忧，正在加强西南诸岛的防卫能力。有自卫队干部披露，此举是“把朝鲜发射作为借口，实际上是设想台湾突发事态而移动了部队。”责编：何平Fri,02Jun202316:54:00-0400“疫苗宝宝之家”发起人何方美遭超期羁押女儿滞留精神病院https://www.rfa.org/mandarin/Xinwen/7-06022023165330.htmlhttps://www.rfa.org/mandarin/Xinwen/7-06022023165330.html“疫苗宝宝之家”发起人何方美何方美推特截图据中国民间权益组织民生观察6月2日引述知情人士披露，维权团体“疫苗宝宝之家”发起人何方美因在2020年10月9日，带着疫苗致残的女儿前往河南辉县政府门前泼油漆抗议，被警察当场带走并刑拘后，目前该案仍未宣判，何方美本人则处在被超期羁押中，而她的两个女儿仍滞留在精神病院。据介绍，何方美因1岁10月大的女儿于2018年3月，在河南辉县接种甲肝、麻腮风、百白破疫苗后,导致病毒性脊髓炎而瘫痪。多方求助投诉均被拒后，夫妇俩人在北京一边为女儿治病，一边上访维权，并因此屡遭当局打压。民生观察披露，近日何方美写信请姐姐照顾孩子，可医院和警察都不让姐姐探望。家属就此呼吁当局，孩子们是无辜的，他们应该和家人一起生活。此外，有网友发起“六一明信片行动，接孩子回家”，通过网络声援人权捍卫者何方美。责编：何平Fri,02Jun202316:53:00-0400美国跨党派议员提案：悼念六四谴责中共打压人权https://www.rfa.org/mandarin/Xinwen/6-06022023165228.htmlhttps://www.rfa.org/mandarin/Xinwen/6-06022023165228.html美国众议院外交事务委员会印太小组主席金映玉（YoungKim）(图左)，和该小组首席议员阿米·贝拉（AmiBera）。维基百科/RFA组图中国六四事件34周年之际，美国众议院外交事务委员会印太小组主席金映玉（YoungKim）和该小组首席议员阿米·贝拉（AmiBera）提出一项跨党派决议，以纪念1989年天安门广场大屠杀的受害者，并谴责中国共产党继续在大陆及香港打压人权和基本自由。金映玉众议员表示，“我们永远不会忘记那些，面对压迫政权而在天安门广场与人民解放军面对面的勇敢的学生们。三十多年后，我们通过支持那些仍然被困在中国共产党威权主义下、但却热爱自由的人们，来缅怀受害者并纪念他们的遗产。”她强调，该决议向外界发出一致信息，即美国将继续成为世界舞台上自由、希望和机会的灯塔。据悉，上述决议案敦促中共当局停止对六四事件进行言论审查，接受联合国人权高专进行的独立调查，并允许流亡海外的六四参与者能在不面临报复风险的情况下返回中国。该决议同时呼吁香港政府及北京当局，尊重港人权利、自由以及香港法治体系的独立性，并依据《中英联合声明》与《基本法》有关“一国两制”的承诺，恢复香港独立的民选代表。上述议案还同时获得其他11位美国两党众议员的联署支持。责编：何平Fri,02Jun202316:52:00-0400据路透社6月2日报道，美国国家安全顾问杰克·沙利文（JakeSullivan）当天向军备控制协会倡导组织发表讲话时表示，美国无需更多核武器来威慑俄罗斯与中国加在一起的武装力量，因为美国具有先进的军事能力。沙利文还表示，只要莫斯科能保持一致，华盛顿将遵守2010年有关战略核武器限制条约的规定，直到该条约2026年到期，并且美国希望与中俄两国举行军备控制谈判。报道说，中国在扩大其核武库的同时，与美国在台湾问题上也处于紧张对峙状态。中方拒绝与华盛顿进行减少冲突风险的对话，本周更拒绝了两国防长在新加坡香格里拉对话会期间的会谈。根据五角大楼估算，到2035年，中国的核武库可能会增加两倍以上，达到1500枚核弹头。而威胁要在对乌克兰战争中使用核武器的俄罗斯，今年2月已宣布暂停参与上述战略核武器限制条约。沙利文表示，美国不需要将核力量增加到超过竞争对手的总和才能成功威慑他们，也不需要部署更加危险的核武器来维持威慑，威慑意味着有“更好”的方法，而不是“更多”的方法。但他强调，上述战略核武器限制条约必须考虑到中国不断增长的核武库问题。责编：何平据本台英语部发自新加坡的报道，在南海和东亚紧张局势升级之际，新加坡举办的重要地区安全论坛“香格里拉对话会”格外引人注目。但会议期间，美中两国防长面对面交流的大门却依然关闭。美国国防部长奥斯汀此前邀请中国国防部长李尚福在新加坡香格里拉对话期间举行双边会谈，但被中国防长拒绝。奥斯汀在抵达新加坡前，以“不幸”形容中方的决定。他表示，拥有强大能力的国家相互对话很重要，以此可管理危机并防止事态失控。据悉，本届为期三天的“香格里拉对话”有来自49个国家的约600位代表与会，美中防长将分别发表演说。另据台湾中央社报道，美国防长奥斯汀与中国防长李尚福等人在周五新加坡晚宴上同坐主桌。先抵达会场的奥斯汀在李尚福到场后主动向前握手致意，但未有太多互动。责编：何平为应对朝鲜发射“军事侦察卫星”以及可能的飞行物散落物体等，日本军方早在数周前即已在冲绳县多个岛屿部署爱国者地对空拦截导弹。但有日本媒体认为，此举是考虑到与台湾突发事态有关的中国大陆，而进行的部队活动“预演”。据共同社6月2日报道，日本防卫相滨田靖一当天回答有关朝鲜发射“卫星”后，原计划在石垣岛展开活动的填埋地“南NU滨”，为何没有“爱国者3”导弹的踪影等问题。滨田靖一仅表示，“对于运用的详情不予回答”。据报道，日本防卫省在4月下旬已经向冲绳县的宫古、石垣、与那国三岛的自卫队设施运进“爱国者3”导弹。但因气候原因，石垣岛没有把导弹系统部署在设施外部，而在宫古岛和与那国岛上的拦截导弹发射器则呈收起状态。共同社指出，日本政府出于对中国军力增强及台湾发生突发事态的担忧，正在加强西南诸岛的防卫能力。有自卫队干部披露，此举是“把朝鲜发射作为借口，实际上是设想台湾突发事态而移动了部队。”责编：何平据中国民间权益组织民生观察6月2日引述知情人士披露，维权团体“疫苗宝宝之家”发起人何方美因在2020年10月9日，带着疫苗致残的女儿前往河南辉县政府门前泼油漆抗议，被警察当场带走并刑拘后，目前该案仍未宣判，何方美本人则处在被超期羁押中，而她的两个女儿仍滞留在精神病院。据介绍，何方美因1岁10月大的女儿于2018年3月，在河南辉县接种甲肝、麻腮风、百白破疫苗后,导致病毒性脊髓炎而瘫痪。多方求助投诉均被拒后，夫妇俩人在北京一边为女儿治病，一边上访维权，并因此屡遭当局打压。民生观察披露，近日何方美写信请姐姐照顾孩子，可医院和警察都不让姐姐探望。家属就此呼吁当局，孩子们是无辜的，他们应该和家人一起生活。此外，有网友发起“六一明信片行动，接孩子回家”，通过网络声援人权捍卫者何方美。责编：何平中国六四事件34周年之际，美国众议院外交事务委员会印太小组主席金映玉（YoungKim）和该小组首席议员阿米·贝拉（AmiBera）提出一项跨党派决议，以纪念1989年天安门广场大屠杀的受害者，并谴责中国共产党继续在大陆及香港打压人权和基本自由。金映玉众议员表示，“我们永远不会忘记那些，面对压迫政权而在天安门广场与人民解放军面对面的勇敢的学生们。三十多年后，我们通过支持那些仍然被困在中国共产党威权主义下、但却热爱自由的人们，来缅怀受害者并纪念他们的遗产。”她强调，该决议向外界发出一致信息，即美国将继续成为世界舞台上自由、希望和机会的灯塔。据悉，上述决议案敦促中共当局停止对六四事件进行言论审查，接受联合国人权高专进行的独立调查，并允许流亡海外的六四参与者能在不面临报复风险的情况下返回中国。该决议同时呼吁香港政府及北京当局，尊重港人权利、自由以及香港法治体系的独立性，并依据《中英联合声明》与《基本法》有关“一国两制”的承诺，恢复香港独立的民选代表。上述议案还同时获得其他11位美国两党众议员的联署支持。责编：何平```0
   ## 6/2/2023 - [沙利文：威慑中俄  美国无需更多核武](https://www.rfa.org/mandarin/Xinwen/10-06022023165710.html)
  ```据路透社6月2日报道，美国国家安全顾问杰克·沙利文（JakeSullivan）当天向军备控制协会倡导组织发表讲话时表示，美国无需更多核武器来威慑俄罗斯与中国加在一起的武装力量，因为美国具有先进的军事能力。沙利文还表示，只要莫斯科能保持一致，华盛顿将遵守2010年有关战略核武器限制条约的规定，直到该条约2026年到期，并且美国希望与中俄两国举行军备控制谈判。报道说，中国在扩大其核武库的同时，与美国在台湾问题上也处于紧张对峙状态。中方拒绝与华盛顿进行减少冲突风险的对话，本周更拒绝了两国防长在新加坡香格里拉对话会期间的会谈。根据五角大楼估算，到2035年，中国的核武库可能会增加两倍以上，达到1500枚核弹头。而威胁要在对乌克兰战争中使用核武器的俄罗斯，今年2月已宣布暂停参与上述战略核武器限制条约。沙利文表示，美国不需要将核力量增加到超过竞争对手的总和才能成功威慑他们，也不需要部署更加危险的核武器来维持威慑，威慑意味着有“更好”的方法，而不是“更多”的方法。但他强调，上述战略核武器限制条约必须考虑到中国不断增长的核武库问题。责编：何平```0
   ## 6/2/2023 - [香格里拉对话会：中方拒绝对话 奥斯汀称之“不幸”](https://www.rfa.org/mandarin/Xinwen/9-06022023165555.html)
@@ -25,7 +29,3 @@
  ```据中国民间权益组织民生观察6月2日引述知情人士披露，维权团体“疫苗宝宝之家”发起人何方美因在2020年10月9日，带着疫苗致残的女儿前往河南辉县政府门前泼油漆抗议，被警察当场带走并刑拘后，目前该案仍未宣判，何方美本人则处在被超期羁押中，而她的两个女儿仍滞留在精神病院。据介绍，何方美因1岁10月大的女儿于2018年3月，在河南辉县接种甲肝、麻腮风、百白破疫苗后,导致病毒性脊髓炎而瘫痪。多方求助投诉均被拒后，夫妇俩人在北京一边为女儿治病，一边上访维权，并因此屡遭当局打压。民生观察披露，近日何方美写信请姐姐照顾孩子，可医院和警察都不让姐姐探望。家属就此呼吁当局，孩子们是无辜的，他们应该和家人一起生活。此外，有网友发起“六一明信片行动，接孩子回家”，通过网络声援人权捍卫者何方美。责编：何平```0
   ## 6/2/2023 - [美国跨党派议员提案：悼念六四  谴责中共打压人权](https://www.rfa.org/mandarin/Xinwen/6-06022023165228.html)
  ```中国六四事件34周年之际，美国众议院外交事务委员会印太小组主席金映玉（YoungKim）和该小组首席议员阿米·贝拉（AmiBera）提出一项跨党派决议，以纪念1989年天安门广场大屠杀的受害者，并谴责中国共产党继续在大陆及香港打压人权和基本自由。金映玉众议员表示，“我们永远不会忘记那些，面对压迫政权而在天安门广场与人民解放军面对面的勇敢的学生们。三十多年后，我们通过支持那些仍然被困在中国共产党威权主义下、但却热爱自由的人们，来缅怀受害者并纪念他们的遗产。”她强调，该决议向外界发出一致信息，即美国将继续成为世界舞台上自由、希望和机会的灯塔。据悉，上述决议案敦促中共当局停止对六四事件进行言论审查，接受联合国人权高专进行的独立调查，并允许流亡海外的六四参与者能在不面临报复风险的情况下返回中国。该决议同时呼吁香港政府及北京当局，尊重港人权利、自由以及香港法治体系的独立性，并依据《中英联合声明》与《基本法》有关“一国两制”的承诺，恢复香港独立的民选代表。上述议案还同时获得其他11位美国两党众议员的联署支持。责编：何平```0
-  ## 6/2/2023 - [六四事件34周年　人权组织敦促中国政府承认屠城责任](https://www.rfa.org/mandarin/Xinwen/5-06022023115605.html)
- ```总部位于美国纽约的国际人权组织人权观察在六四事件34周年前夕发表声明，敦促中国政府承认大规模杀害民主运动示威者的责任，并为死难者及其家属提供赔偿。声明指出，当全球民众悼念1989年北京六四屠杀之际，中国当局正日益积极抹消相关记忆，并从六四周年的几星期前就开始防堵民间悼念。各地维权人士和六四死难者亲属团体“天安门母亲”的成员，均遭限制行动与对外联系。而中国政府从未承认对屠杀负责，也从未追究任何官员的法律责任，既无意调查相关事件，也不愿公布被杀死、杀伤、强迫失踪或入狱者的资料。人权观察表示，对六四屠杀及其后续镇压缺乏长期一致的国际应对，是导致北京当局日益明目张胆侵犯人权的因素之一。作为多部国际人权条约缔约国以及联合国人权理事会现任成员，中国有义务“维护人权的最高标准”。人权观察敦促中国政府尊重言论、结社自由与和平集会的权利，停止对质疑六四屠杀官方说法的人士加以骚扰和任意拘留；向“天安门母亲”成员道歉，公布所有死难者名单，并向死难者家属提供赔偿；批准对六四及后续事件进行公开独立调查，并迅速公布调查结果与结论；允许涉及八九民运而流亡海外的中国公民不受阻碍返国；以及调查所有参与策划或下令对示威群众非法使用致命武力的政府与军方官员，并予以起诉。责编：何平```0
-  ## 6/2/2023 - [《华尔街日报》：美国在亚洲建立前哨基地应对中国导弹威胁](https://www.rfa.org/mandarin/Xinwen/4-06022023114919.html)
- ```据美国《华尔街日报》6月2日报道，为应对来自中国不断增大的军事挑战，美国已在亚洲采取新的军事策略，包括增多前哨基地，以摆脱对大型军事基地的严重依赖。这个周末，由多国国防部长出席的香格里拉对话会将拉开帷幕，中国日益增强的军力和美国在亚洲的军事存在预计将成为会议的主题之一。而中国日前拒绝了美国提出的有关两国防长在会议期间举行会晤的要求。报道说，随着中国导弹库日渐扩大，技术越发先进，美军在亚洲的大型基地日益面临危险。而通过将武器装备、部队和指挥所分散到较小的前哨基地，美国希望使中国更难通过削弱任何单一军事设施来发动打击。根据五角大楼估算，中国现有超过1300枚弹道导弹可用于打击亚太地区目标，其中超过250枚可打到美国在关岛的主要军事基地。责编：何平```0
