--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,6 @@
 
+  ## 6/3/2023 - [美国制裁后，苏丹战斗恶化](https://www.voachinese.com/a/fighting-worsens-in-sudan-20230603/7121827.html)
+ ```苏丹首都喀土穆地区星期五遭受炮击，交战双方的战斗加剧，美国之前在美国与沙特阿拉伯协调的停火瓦解后实施了制裁。```0
   ## 6/3/2023 - [以色列同埃及爆发边境冲突，造成4名军人死亡](https://www.voachinese.com/a/israel-egypt-border-clash-20230603/7121803.html)
  ```官员们说，以色列军人星期六在南部与埃及的边境同一名埃及边防警卫发生枪战，导致三名以色列军人和这名埃及边防警卫死亡。```0
   ## 6/3/2023 - [美国在印太安全布局获得重大进展，专家：区域军力平衡可能向美国及盟友倾斜](https://www.voachinese.com/a/us-china-naval-power-balance-20230603/7121653.html)
@@ -38,5 +40,3 @@
  ```美国参谋长联席会议主席、陆军上将马克·米利说，培训乌克兰军队使用先进的美制艾布拉姆斯坦克的工作已经开始，这些武器从长期来讲是把俄罗斯赶出乌克兰被占领土的关键，但是来不及用于基辅即将展开的反攻。```0
   ## 6/2/2023 - [美中情局长伯恩斯秘密访华，再促两国关系融冰](https://www.voachinese.com/a/cia-dir-burns-secret-china-visit-shows-us-china-will-improve-relation-20230602/7120539.html)
  ```美国中央情报局局长伯恩斯上个月曾秘密前往北京，这是拜登政府官员近年来对中国的最高级别访问。美中关系的观察人士认为，伯恩斯的秘密出访显示美中双方都有意缓和紧张关系。```0
-  ## 6/2/2023 - [司法部：不会就在彭斯家中发现机密文件一事提起刑事指控](https://www.voachinese.com/a/justice-dept-won-t-charge-pence-over-handling-of-classified-documents-20230602/7120987.html)
- ```美国司法部已通知前副总统迈克·彭斯的法律团队，不会就在其印第安纳州的家中发现机密文件的事件提起刑事指控。```0
