--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,20 @@
 
+  ## 6/3/2023 - [彭立发、张展、李康梦获提名角逐诺贝尔和平奖](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E5%BD%AD%E7%AB%8B%E5%8F%91-%E5%BC%A0%E5%B1%95-%E6%9D%8E%E5%BA%B7%E6%A2%A6%E8%8E%B7%E6%8F%90%E5%90%8D%E8%A7%92%E9%80%90%E8%AF%BA%E8%B4%9D%E5%B0%94%E5%92%8C%E5%B9%B3%E5%A5%96)
+ ```在天安门事件34周年前夕，美国国会暨行政当局中国委员会（CECC）两党领袖6月2日发表书面声明纪念天安门大屠杀事件34周年。他们还宣布增加提名北京四通桥抗议事件主彭立发、公民记者张展以及南京传媒学院学生李康梦等角三人为2023年诺贝尔和平奖候选人。因为“这些英雄的勇气应该要得到全世界的嘉奖。”```0
+  ## 6/3/2023 - [法记者：记住当年只身阻挡坦克的中国年轻人](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20230603-%E6%B3%95%E8%AE%B0%E8%80%85-%E8%AE%B0%E4%BD%8F%E5%BD%93%E5%B9%B4%E5%8F%AA%E8%BA%AB%E9%98%BB%E6%8C%A1%E5%9D%A6%E5%85%8B%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%B9%B4%E8%BD%BB%E4%BA%BA)
+ ```今年6月4日是1989年"六四"天安门屠杀34周年。全球性的法语电视频道-电视国际五台(TV5)长篇报道了纽约六四纪念馆。法国《十字架报》重点报道了34年前6月5日美国摄影师杰夫·怀德纳（JeffWidener）拍摄的坦克人的照片。《十字架报》写道：三十四年前，一名手无寸铁的年轻学生在天安门广场阻拦一辆坦克。该报笔锋一转说，而今年的六四34周年前夕，香港警方在维园及铜锣湾拘捕多人。```0
+  ## 6/3/2023 - [王丹 ：即便在美国也会感到来自中共的威胁](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%8E%8B%E4%B8%B9-%E5%8D%B3%E4%BE%BF%E5%9C%A8%E7%BE%8E%E5%9B%BD%E4%B9%9F%E4%BC%9A%E6%84%9F%E5%88%B0%E6%9D%A5%E8%87%AA%E4%B8%AD%E5%85%B1%E7%9A%84%E5%A8%81%E8%83%81)
+ ```天安门事件34周年前，曾参加1989年天安门广场抗议活动的中国异议人士在纽约，为全球唯一的六四纪念馆揭幕，旨在纪念“中国人的民主梦想”。其中当年抗议活动的学生领导人、记念馆创始人王丹表示，“纪念馆的意义不只在于记忆，也是为了当下与未来”。```0
+  ## 6/3/2023 - [香港舞台剧《5月35日》台北上演](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E9%A6%99%E6%B8%AF%E8%88%9E%E5%8F%B0%E5%89%A7-5%E6%9C%8835%E6%97%A5-%E5%8F%B0%E5%8C%97%E4%B8%8A%E6%BC%94)
+ ```六四事件34周年前夕，一部以天安门母亲为主角的香港舞台剧《5月35日》自6月2日起一连在台北演出6场。台湾主演剧团创办人钟伯渊说，该剧反映的是中共如何在这34年来抹灭和洗白有关六四的记忆。他希望透过这出在中国和香港都禁演的舞台剧，来缅怀六四精神，更让观众认清，中共政权对人权的威胁不分对象，无所不在。```0
+  ## 6/3/2023 - [克里姆林宫禁止西方记者采访圣彼得堡论坛](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E5%85%8B%E9%87%8C%E5%A7%86%E6%9E%97%E5%AE%AB%E7%A6%81%E6%AD%A2%E8%A5%BF%E6%96%B9%E8%AE%B0%E8%80%85%E9%87%87%E8%AE%BF%E5%9C%A3%E5%BD%BC%E5%BE%97%E5%A0%A1%E8%AE%BA%E5%9D%9B)
+ ```路透社3日报道，俄罗斯克里姆林宫当天表示，来自“不友好国家”的记者将不被允许参加今年的圣彼得堡国际经济论坛。峰会被是俄国总统普京向国际投资者展示俄罗斯经济的好机会，但乌克兰战争给这次峰会蒙上了阴影。此前，西方记者从未如此全面地被禁止进入该论坛。```0
+  ## 6/3/2023 - [巴黎白夜庆祝会上的六四纪念活动](https://www.rfi.fr/cn/%E4%BA%BA%E6%9D%83/20230603-%E5%B7%B4%E9%BB%8E%E7%99%BD%E5%A4%9C%E5%BA%86%E7%A5%9D%E4%BC%9A%E4%B8%8A%E7%9A%84%E5%85%AD%E5%9B%9B%E7%BA%AA%E5%BF%B5%E6%B4%BB%E5%8A%A8)
+ ```巴黎市政府举行的庆祝夏日来临的白夜活动在锣鼓声中拉开了序幕，来自华人社群的舞狮表演吸引了大量的游客以及巴黎市民，许多巴黎人携家带口来到市政府广场欣赏音乐与歌舞，就在舞狮表演的附近，十多位巴黎华人以及人权组织代表默默地举着白纸，上面写着在狱中的香港支联会组织的代表，以及被关押的中国异议分子的名字。也有人高举着坦克的图片，以及将镇压学生的政权钉在耻辱柱上的丹麦艺术家高志活（JensGalschiøt）制造的国殇之柱的复制图。```0
+  ## 6/3/2023 - [拜登签署债务上限法案 避免灾难性违约危机](https://www.rfi.fr/cn/%E7%BE%8E%E6%B4%B2/20230603-%E6%8B%9C%E7%99%BB%E7%AD%BE%E7%BD%B2%E5%80%BA%E5%8A%A1%E4%B8%8A%E9%99%90%E6%B3%95%E6%A1%88-%E9%81%BF%E5%85%8D%E7%81%BE%E9%9A%BE%E6%80%A7%E8%BF%9D%E7%BA%A6%E5%8D%B1%E6%9C%BA)
+ ```美国白宫宣布，总统拜登已正式签署提高债务上限的法案。该法案经过数周激烈争论后获得国会通过，也避免了灾难性违约。```0
+  ## 6/3/2023 - [中一名电动自行车企业老板在巴黎南郊被拘](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E4%B8%AD%E4%B8%80%E5%90%8D%E7%94%B5%E5%8A%A8%E8%87%AA%E8%A1%8C%E8%BD%A6%E4%BC%81%E4%B8%9A%E8%80%81%E6%9D%BF%E5%9C%A8%E5%B7%B4%E9%BB%8E%E5%8D%97%E9%83%8A%E8%A2%AB%E6%8B%98)
+ ```法新社转引《巴黎人报》一则消息说，一名43岁的专门从事电动自行车的中国企业家周五被欧洲代表检察官起诉，随后因涉嫌欧洲关税欺诈而被监禁。据知情人士透露，名为李军D(音译LijunD).于2日被金融司法调查局(SEJF)的海关逮捕，然后被警方拘押在塞纳河畔远郊瓦兹河谷省(Val-de-Marne)。```0
   ## 6/3/2023 - [记念“六四”34周年 美国国会中国委员会发声](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20230603-%E8%AE%B0%E5%BF%B5-%E5%85%AD%E5%9B%9B-34%E5%91%A8%E5%B9%B4-%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E4%B8%AD%E5%9B%BD%E5%A7%94%E5%91%98%E4%BC%9A%E5%8F%91%E5%A3%B0)
  ```今天是1989年六四事件34周年。34年来，六四记念成为海外华人和国际社会的活动，而在中国大陆，六四成为禁忌话题。随着中国政治在极权之路上越走越远，香港也不能再组织公开的六四记念活动。但美国国会暨行政当局中国委员会发声记念六四，并增提彭立发等三人为2023年诺贝尔和平奖的候选人。```0
   ## 6/3/2023 - [六四34周年：海外中国留学生接着点燃蜡烛](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%89%B9%E5%88%AB%E8%8A%82%E7%9B%AE/20230603-%E5%85%AD%E5%9B%9B34%E5%91%A8%E5%B9%B4-%E6%B5%B7%E5%A4%96%E4%B8%AD%E5%9B%BD%E7%95%99%E5%AD%A6%E7%94%9F%E6%8E%A5%E7%9D%80%E7%82%B9%E7%87%83%E8%9C%A1%E7%83%9B)
@@ -43,19 +59,3 @@
  ```美国拜登政府急切希望与中国重新恢复对话。在美国国防部长奥斯汀出席新加坡香格里拉安全对话论坛主动与中国国防部长李尚福握手互动消息传出之前，美国中央情报局局长伯恩斯被爆料数日前曾秘密访问北京。美国强调与中国高层对话具有重要意义。```0
   ## 6/3/2023 - [印度重大铁路事故死亡人数升至288人，850人受伤](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230603-%E5%8D%B0%E5%BA%A6%E9%87%8D%E5%A4%A7%E9%93%81%E8%B7%AF%E4%BA%8B%E6%95%85%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E5%8D%87%E8%87%B3288%E4%BA%BA%EF%BC%8C850%E4%BA%BA%E5%8F%97%E4%BC%A4)
  ```印度周五（6月2日）晚间发生三辆火车相撞重大事故，救灾官员表示，已知造成至少288人死亡，850人受伤，死伤人数仍在攀升，这是印度逾20年来最惨重的铁路事故。```0
-  ## 6/3/2023 - [美国防长呼吁中国军方开放沟通渠道 避免冲突](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%BE%8E%E5%9B%BD%E9%98%B2%E9%95%BF%E5%91%BC%E5%90%81%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%96%B9%E5%BC%80%E6%94%BE%E6%B2%9F%E9%80%9A%E6%B8%A0%E9%81%93-%E9%81%BF%E5%85%8D%E5%86%B2%E7%AA%81)
- ```美国防长奥斯汀于6月3日在“香格里拉对话”亚洲安全峰会上呼吁中国国防和军事领导人开放沟通渠道，避免冲突促进亚洲地区稳定。```0
-  ## 6/2/2023 - [在中国，埃隆·马斯克展示了他是怎样的两面派](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20230602-%E5%9C%A8%E4%B8%AD%E5%9B%BD%EF%BC%8C%E5%9F%83%E9%9A%86%C2%B7%E9%A9%AC%E6%96%AF%E5%85%8B%E5%B1%95%E7%A4%BA%E4%BA%86%E4%BB%96%E6%98%AF%E6%80%8E%E6%A0%B7%E7%9A%84%E4%B8%A4%E9%9D%A2%E6%B4%BE)
- ```世界首富埃隆·马斯克在对中国的三天访问期间受到了中国高规格的接待。周五，法国世界报就马斯克的姿态及其两面派语言刊发了社论。```0
-  ## 6/2/2023 - [为阻止朝鲜开发核导弹，韩国强调要切断朝鲜资金链](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230602-%E4%B8%BA%E4%B8%BA%E9%98%BB%E6%AD%A2%E6%9C%9D%E9%B2%9C%E5%BC%80%E5%8F%91%E6%A0%B8%E5%AF%BC%E5%BC%B9%EF%BC%8C%E9%9F%A9%E5%9B%BD%E5%BC%BA%E8%B0%83%E8%A6%81%E5%88%87%E6%96%AD%E6%9C%9D%E9%B2%9C%E8%B5%84%E9%87%91%E9%93%BE)
- ```在新加坡举行的第20届香格里拉对话会上韩国代表强调为阻止朝鲜核导弹开发进程，有必要切断朝鲜资金链。```0
-  ## 6/2/2023 - [英国国防部长称乌克兰今年能夺回克里米亚](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230602-%E8%8B%B1%E5%9B%BD%E5%9B%BD%E9%98%B2%E9%83%A8%E9%95%BF%E7%A7%B0%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%8A%E5%B9%B4%E8%83%BD%E5%A4%BA%E5%9B%9E%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A)
- ```英国国防部长华莱士今天接受华盛顿邮报专访。该报称，与其他一些北约官员的私下沉思相反，华莱士表示，乌克兰确实有可能成功夺回克里米亚半岛。普京在2014年非法吞并克里米亚半岛，今年俄罗斯军队所需的设备均用完了。华莱士称，乌克兰可能不会今夏就加入北约，但各国与乌克兰签订双边或多边防御合作，也能提高保护乌克兰安全的高度。```0
-  ## 6/2/2023 - [金砖外长会议遭“轰炸”式问普京事 南非今斥责西方](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230602-%E9%87%91%E7%A0%96%E5%A4%96%E9%95%BF%E4%BC%9A%E8%AE%AE%E9%81%AD-%E8%BD%B0%E7%82%B8-%E5%BC%8F%E9%97%AE%E6%99%AE%E4%BA%AC%E4%BA%8B-%E5%8D%97%E9%9D%9E%E4%BB%8A%E6%96%A5%E8%B4%A3%E8%A5%BF%E6%96%B9)
- ```连续两天金砖集团外长会议会里会外聚焦普京与会会不会被南非执行国际刑事法庭通缉令而逮捕爆炸性问题。南非是国际刑事法院签约成员国，但也与俄罗斯关系良好。南非没有明确回应提问，但今天指控西方国家利用乌克兰战争搅局，怀了南非在内占据世界绝大多数人口希望在南非的金砖峰会讨论脱贫的最大愿望。```0
-  ## 6/2/2023 - [香港不准点纪念六四烛光 海外显示延伸接力](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E9%A6%99%E6%B8%AF%E4%B8%8D%E5%87%86%E7%82%B9%E7%BA%AA%E5%BF%B5%E5%85%AD%E5%9B%9B%E7%83%9B%E5%85%89-%E6%B5%B7%E5%A4%96%E6%98%BE%E7%A4%BA%E5%BB%B6%E4%BC%B8%E6%8E%A5%E5%8A%9B)
- ```由于香港的国安法限制已经扼杀了曾经规模最大的纪念1989年天安门广场镇压的守夜活动，世界其他地区包括伦敦、纽约、柏林和台北等30多个城市与地点计划接力点亮蜡烛来纪念6月4日周年纪念日。```0
-  ## 6/2/2023 - [奥斯汀与李尚福在香格里拉握手但没有交流](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E5%A5%A5%E6%96%AF%E6%B1%80%E4%B8%8E%E6%9D%8E%E5%B0%9A%E7%A6%8F%E5%9C%A8%E9%A6%99%E6%A0%BC%E9%87%8C%E6%8B%89%E6%8F%A1%E6%89%8B%E4%BD%86%E6%B2%A1%E6%9C%89%E4%BA%A4%E6%B5%81)
- ```美国五角大楼周五报告，美国国防部长劳埃德·奥斯汀在新加坡香格里拉安全峰会期间与中国国防部长李尚福握了手，但两人没有进行“实质性交流”。中国仍然拒绝与美国进行防长交流。```0
-  ## 6/2/2023 - [面对中国导弹威胁 美国在亚洲采取新军事策略](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E9%9D%A2%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%AF%BC%E5%BC%B9%E5%A8%81%E8%83%81-%E7%BE%8E%E5%9B%BD%E5%9C%A8%E4%BA%9A%E6%B4%B2%E9%87%87%E5%8F%96%E6%96%B0%E5%86%9B%E4%BA%8B%E7%AD%96%E7%95%A5)
- ```美国在亚洲采取新军事策略，包括通过将武器装备、部队和指挥所分散到各地前哨基地，美国希望使中国更难通过削弱任何单一军事设施来发动决定性打击。```0
